--- a/product/互联网中间件/TDMQ CMQ 版/05 操作指南/01 队列服务/02 查看队列详情.md
+++ b/product/互联网中间件/TDMQ CMQ 版/05 操作指南/01 队列服务/02 查看队列详情.md
@@ -26,6 +26,6 @@
   | 流量限制               | 生产消息最大吞吐带宽，超过此限制将会被限流（生产请求的响应时长会增加）。 |
   | 死信队列               | 死信队列用于处理无法被正常消费的消息。达到最大重试次数后，若消费依然失败，则表明消费者在正常情况下无法正确地消费该消息，此时，MQ 不会立刻将消息丢弃，而是将其发送到该消费者对应的特殊队列中 |
 
-- 消息回溯：使用消息回溯功能您可在业务成功消费并删除消息后重新消费已删除的消息，详情参考 [消息回溯]()。
+- 消息回溯：使用消息回溯功能您可在业务成功消费并删除消息后重新消费已删除的消息，详情参考 [消息回溯](https://cloud.tencent.com/document/product/1496/61018)。
 
 ![](https://main.qcloudimg.com/raw/5d6a37e0b2c5097f413783eb0de1db6e.png)
