--- a/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/微搭投票小程序模板.md
+++ b/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/微搭投票小程序模板.md
@@ -16,11 +16,11 @@
 ![img](https://main.qcloudimg.com/raw/68c4efd1c37acd183dfbfdb9784f275a.png)        
  #### 组件编辑
 ![img](https://main.qcloudimg.com/raw/abaa754a6db3416b6e3164f3ff2f77cd.png)        
-- **页面管理**支持切换页面，对所有页面进行个性化装修
-- **编辑区**单击选中要编辑的组件
-- **预览区**可查看页面效果
-- **组建编辑**可按需修改您的个性化内容，包含数据（静态文本、图片）、样式、事件
-- **组件**模版所带组件库，可用于新页面开发
+- **页面管理**：支持切换页面，对所有页面进行个性化装修
+- **编辑区**：单击选中要编辑的组件
+- **预览区**：可查看页面效果
+- **组建编辑**：可按需修改您的个性化内容，包含数据（静态文本、图片）、样式、事件
+- **组件**：模版所带组件库，可用于新页面开发
 
 ### 页面跳转
 打开左侧大纲树选择对应的**Tab 栏**，进入右侧的**组件编辑** > **数据**页面中，可通过修改相应配置，设置页面跳转。
