--- a/product/计算与网络/无服务器云函数/最佳实践/客户案例/餐饮行业案例.md
+++ b/product/计算与网络/无服务器云函数/最佳实践/客户案例/餐饮行业案例.md
@@ -16,8 +16,8 @@
 
 - 点餐、下单、支付、制作、出品实现实时在线化。
 - 用餐评价，会员管理可以在线化，支持数字化营销。
-- 供应链订货、收获、盘点、损耗在流程在线，数据打通。
-- 人事、考勤、成本核算等在线化、工具化、高效化。这些方面是新餐饮转型在这方面要进行全方面的数字化改造。
+- 供应链订货、收获、盘点、损耗等流程在线，数据打通。
+- 人事、考勤、成本核算等在线化、工具化、高效化。新餐饮转型需要进行全方面的数字化改造。
 
 经过一系列调研分析，企业决定向云上进行业务迁移，并采用腾讯云 Serverless 云函数承载业务。
 
