--- a/product/计算与网络/共享流量包/产品动态.md
+++ b/product/计算与网络/共享流量包/产品动态.md
@@ -16,3 +16,23 @@
 <td><a href="https://cloud.tencent.com/document/product/1171/40185#product-type">闲时流量包</a></td> 
 </tbody>
 </table>
+
+
+## 2020年5月
+<table>
+<thead>
+<tr>
+<th width="25%">动态名称</th>
+<th width="40%">动态描述</th>
+<th width="15%">发布时间</th>
+<th>相关文档</th>
+</tr>
+</thead>
+<tbody>
+ <tr>
+<td>共享流量包产品上线</td> 
+<td>共享流量包是一种预付费公网流量套餐，可自动抵扣多种产品的流量消耗。相比按流量计费，共享流量包单价更低，管理方便，有效帮助您降低网络成本、简化预算管理。</td> 
+<td>2020-05</td> 
+<td><a href="https://cloud.tencent.com/document/product/1171">闲时流量包</a></td> 
+</tbody>
+</table>
