--- a/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/餐饮电商小程序模板.md
+++ b/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/餐饮电商小程序模板.md
@@ -71,11 +71,11 @@
 
 装修编辑器整体介绍：
 ![](https://main.qcloudimg.com/raw/1191cd8fa6132df7017da40aa2643791.jpg)
-- **页面管理**支持切换页面，对所有页面进行个性化装修。
-- **编辑区**单击选中要编辑的组件。
-- **预览区**可查看页面效果。
-- **组建编辑**可按需修改您的个性化内容，包含数据（静态文本、图片）、样式、事件。
-- **组件**模版所带组件库，可用于新页面开发。
+- **页面管理**：支持切换页面，对所有页面进行个性化装修。
+- **编辑区**：单击选中要编辑的组件。
+- **预览区**：可查看页面效果。
+- **组建编辑**：可按需修改您的个性化内容，包含数据（静态文本、图片）、样式、事件。
+- **组件**：模版所带组件库，可用于新页面开发。
 
 <dx-alert infotype="explain" title="">
 <ul style = "margin-bottom: 0px;"><li>如您在装修过程中遇到任何问题，欢迎咨询模版提供客服。</li>
