--- a/product/计算与网络/无服务器云函数/最佳实践/客户案例/餐饮行业案例.md
+++ b/product/计算与网络/无服务器云函数/最佳实践/客户案例/餐饮行业案例.md
@@ -1,6 +1,6 @@
 ## 客户介绍
 
-国内某连锁餐饮企业，目前在深圳、广州、上海、苏州、佛山、惠州、东莞、昆明、重庆等地拥有140多家直营门店。同是也是红山资本成员企业，是红杉资本在中国投资的餐饮企业之一。
+国内某连锁餐饮企业，目前在深圳、广州、上海、苏州、佛山、惠州、东莞、昆明、重庆等地拥有140多家直营门店。同时也是红杉资本成员企业，是红杉资本在中国投资的餐饮企业之一。
 
 #### 客户痛点
 
