--- a/product/互联网中间件/TDMQ CMQ 版/05 操作指南/01 队列服务/06 死信队列.md
+++ b/product/互联网中间件/TDMQ CMQ 版/05 操作指南/01 队列服务/06 死信队列.md
@@ -1,4 +1,4 @@
-本文为您介绍 TDMQ CMQ 版死信队列的基本概念，应用场景和使用方法。
+本文为您介绍 TDMQ CMQ 版死信队列的基本概念、应用场景和使用方法。
 
 ## 功能介绍
 
@@ -7,16 +7,17 @@
 ## 应用场景
 
 - **定位问题**：例如，某条消息被多次消费后却未被删除，一般是由于该消息未被正确消费，可能存在问题需要回溯定位。 您可以设置最大接收次数，超额后该消息会被淘汰到指定的死信队列，便于后续问题发现。
-- **优先级队列**：例如，摩拜单车等 O2O 客户，对访问时延、实时性要求非常高。单车开锁逻辑中，当 CMQ 堆积了1亿条消息时，会优先处理最新生产的部分消息，老的消息淘汰到死信队列，在消费者有能力时再处理。
+
+- **优先级队列**：例如，共享单车等 O2O 客户，对访问时延、实时性要求非常高。单车开锁逻辑中，当 CMQ 堆积了1亿条消息时，会优先处理最新生产的部分消息，老的消息淘汰到死信队列，在消费者有能力时再处理。
 老的消息（如用户扫码开车场景）在等待时已流失了用户，老的消息的价值会偏小，建议优先处理最新消息。
 
 ## 使用方法
 
-在 [TDMQ CMQ 版控制台](https://console.cloud.tencent.com/tdmq/cmq-queue)新建队列的时候，您可以开启死信队列功能。
+在 [TDMQ CMQ 版控制台](https://console.cloud.tencent.com/tdmq/cmq-queue) 新建队列的时候，您可以开启死信队列功能。
 
-![](https://main.qcloudimg.com/raw/000a384dda9a8870902562ce567a360b.png)
+<img src="https://main.qcloudimg.com/raw/000a384dda9a8870902562ce567a360b.png" width="500px">
 
-- 死信队列名称：指定某队列为该队列的死信队列
+- 死信队列名称：指定某队列为该队列的死信队列。
 
 - 死信策略：触发死信消息的方式。
   - 最大接收次数：将消息发送到死信队列前允许接收该消息的最大次数，支持设定值为1 - 1000次。
