--- a/product/大数据与AI/弹性MapReduce/操作指南/管理资源/变更配置.md
+++ b/product/大数据与AI/弹性MapReduce/操作指南/管理资源/变更配置.md
@@ -9,9 +9,9 @@
 5. 变配机型规格需大于或等于当前规格。
 
 ## 操作步骤
-1. 登录 [EMR 控制台](https://console.cloud.tencent.com/emr)，在【集群列表】中单击对应的集群【ID/名称】进入集群详情页。
-2. 在集群详情页中选择【集群资源】进入【资源管理】页。根据业务需要和节点类型选择需要变更的实例，选择【操作】>【变更配置】。
+1. 登录 [EMR 控制台](https://console.cloud.tencent.com/emr)，在集群列表中单击对应的集群 **ID/名称**进入集群详情页。
+2. 在集群详情页中选择**集群资源**进入**资源管理**页。根据业务需要和节点类型选择需要变更的实例，选择**操作 > 变更配置**。
 3. 在调整配置页，确认相关变配信息，需认真阅读重要提示并勾选同意变更信息。
 ![](https://main.qcloudimg.com/raw/2a2f357b776cb3e3033bd18cfeb86aa6.png)
 ![](https://main.qcloudimg.com/raw/e6f9b7b045f8b0d5b01948d3a177d9a3.png)![](https://main.qcloudimg.com/raw/bbfd9a8ecc084d25ecb6f990d70094c8.png)
-4. 选择目标配置，选择变配的配置。费用确认无误后，单击【开始调整】即可调整配置。
+4. 选择目标配置，选择变配的配置。费用确认无误后，单击**开始调整**即可调整配置。
