--- a/product/数据库/图数据库EasyGraph/操作指南/重置密码.md
+++ b/product/数据库/图数据库EasyGraph/操作指南/重置密码.md
@@ -1,15 +1,14 @@
+
 ## 操作场景
 图数据库 KonisGraph 支持重置实例密码，如您在使用图数据库 KonisGraph 过程中，忘记数据库帐号密码或需修改密码，可通过控制台重新设置密码。
->?
-
->- 为了数据安全，建议您定期更换密码，最长间隔不超过3个月。
+>?为了数据安全，建议您定期更换密码，最长间隔不超过3个月。
 
 
 ## 操作步骤
-1. 登录 [KonisGraph 控制台](https://console.cloud.tencent.com/konisgraph/)，在实例列表，单击实例 ID 或“操作”列的【管理】，进入实例管理页面。
-2. 在实例管理页面，选择【帐号管理】页签，选择需要重置密码的帐号，单击【重置密码】。
-![](https://main.qcloudimg.com/raw/b25058f5c4c0b9c683ee330618436c5c.png)
-3. 在重置密码对话框，输入新密码和确认密码，单击【确定】即可完成密码重置。
->?8-64个字符，需包含大小写字母、数字和~!@#$%^&*_-+=|(){}[]:;  <>,.?/字符中的至少三种
+1. 登录 [KonisGraph 控制台](https://console.cloud.tencent.com/konisgraph)，在实例列表，单击实例 ID 或**操作**列的**管理**，进入实例管理页面。
+2. 在实例管理页面，选择**帐号管理**页，选择需要重置密码的帐号，单击**重置密码**。
+3. 在重置密码对话框，输入新密码和确认密码，单击**确定**。
+>?密码需8个 - 64个字符，包含大小写字母、数字和`~!@#$%^&*_-+=|(){}[]:;  <>,.?/`字符中的至少三种。
 > 
-![](https://main.qcloudimg.com/raw/6defa273f0395b3643d99dcdb5278e44.png)
+![](https://main.qcloudimg.com/raw/0d0e1dcfd95eada4f30fe1129ddc399a.png)
+
