--- a/product/大数据与AI/弹性MapReduce/操作指南/管理资源/自动伸缩.md
+++ b/product/大数据与AI/弹性MapReduce/操作指南/管理资源/自动伸缩.md
@@ -7,7 +7,7 @@
 3. 负载伸缩和时间伸缩策略，只能二选一不能同时使用。
 
 ## 操作步骤
-登录 [EMR 控制台](https://console.cloud.tencent.com/emr) 在集群列表中单击【集群 ID/名称】，进入集群详情页面后，选择【自动伸缩】>【基础设置】>【编辑】配置自动伸缩功能相关触发策略。
+登录 [EMR 控制台](https://console.cloud.tencent.com/emr) 在集群列表中单击集群 **ID/名称**，进入集群详情页面后，选择**自动伸缩 > 基础设置 > 编辑**配置自动伸缩功能相关触发策略。
 ![](https://main.qcloudimg.com/raw/caea2748caa5459f5f6075f7003197cf.png)
 
 
@@ -34,13 +34,13 @@
 伸缩规则是配置扩缩容动作触发条件以及变化节点数量的业务策略，支持按负载伸缩和时间伸缩两种伸缩策略（这两种策略只能二选一，不能同时使用）。策略切换时，原伸缩规则会保留，但处于失效状态，不会被触发执行。当前已扩容的节点也会保留，除非缩容规则触发，否则不会被缩容。每种策略最多可配置10条伸缩规则，当两条规则同时触发时，会先执行优先级较高的规则。
 ![](https://main.qcloudimg.com/raw/31e373a4ae8274bf20e97d310e1c1c37.png)
 
-设置伸缩规则，需要在【伸缩规则管理】模块，选择【自动伸缩类型】为【负载伸缩】或【时间伸缩】，然后单击【添加规则】即可。
+设置伸缩规则，需要在**伸缩规则管理**模块，选择**自动伸缩类型**为负载伸缩或时间伸缩，然后单击**添加规则**即可。
 ![](https://main.qcloudimg.com/raw/e0ef5cfef4ee497442c8257912e392df.png)
   
 #### 负载伸缩
 无法准确的预估集群计算的波峰和波谷时，为确保重要作业按时完成，可使用按负载伸缩进行策略配置。负载主要基于预设 YARN 的指标统计规则，触发预设条件时自动调整 task 节点。
 
-添加负载伸缩规则，需要选择【自动伸缩类型】为【负载伸缩】，然后单击【添加规则】，在“新建规则”页面，配置如下内容：
+添加负载伸缩规则，需要选择**自动伸缩类型**为负载伸缩，然后单击**添加规则**，在“新建规则”页面，配置如下内容：
 - 规则名称：伸缩规则的名称，在一个集群中，伸缩规则名称不允许重复（包括扩容规则和缩容规则）。
 - 有效时间：仅在有效时间内触发负载伸缩规则；默认时间范围选择**不限制**，支持自定义时间段按负载进行伸缩规则配置。    
 - 负载指标：根据选定的集群负载指标设置触发阈值的条件规则，此处指 YARN 的负载指标。
@@ -81,7 +81,7 @@
 #### 时间伸缩
 集群计算量存在一定周期内的明显波峰和波谷，为确保重要作业按时完成，可以使用时间伸缩进行策略配置。时间伸缩策略可以设置在每天、每周或每月的固定时间段添加或减少 task 节点。
 
-添加时间伸缩规则，需要选择【自动伸缩类型】为【时间伸缩】，然后单击【添加规则】，在“新建规则”页面，配置如下内容：
+添加时间伸缩规则，需要选择**自动伸缩类型**为时间伸缩，然后单击**添加规则**，在“新建规则”页面，配置如下内容：
 - 规则名称：伸缩规则的名称，在一个集群中，伸缩规则名称不允许重复（包括扩容规则和缩容规则）。
 - 执行一次：指特定的时间进行触发伸缩动作，精确到分钟。
 - 重复执行：指设定每个时间段或特定的时间触发伸缩动作，分别支持“每日”、“每周”、“每月”。
@@ -98,7 +98,7 @@
 ### 查看自动伸缩记录
 伸缩记录可查看自动伸缩活动的执行记录等信息。
 - 可按执行时间段筛选伸缩记录，并且支持按策略名称进行查找。
-- 按时间顺序排列展示，执行时间、策略名称、伸缩类型、执行状态，在操作类型下单击【详情】可查看详细信息。
+- 按时间顺序排列展示，执行时间、策略名称、伸缩类型、执行状态，在操作类型下单击**详情**可查看详细信息。
 - 自动伸缩的执行状态包括以下四类：
  - 执行中：自动伸缩活动正在执行。
  - 成功：根据伸缩规则，所有自动伸缩中的所有节点被加入或移出集群。
