--- a/product/大数据与AI/弹性MapReduce/操作指南/监控告警/日志搜索.md
+++ b/product/大数据与AI/弹性MapReduce/操作指南/监控告警/日志搜索.md
@@ -4,10 +4,10 @@
 日志搜索支持根据当前集群、日志文件、节点 IP 和时间范围条件过滤，日志结果包含节点 IP、日志在节点上的绝对路径和日志内容。
 
 ## 操作步骤
-1. 登录 [EMR 控制台](https://console.cloud.tencent.com/emr)，在【集群列表】中单击对应的集群【ID/名称】进入集群详情页。
-2. 在集群详情页中选择【集群监控】>【日志搜索】可根据当前集群、日志文件、节点 IP 和时间范围条件过滤，查看日志内容。
+1. 登录 [EMR 控制台](https://console.cloud.tencent.com/emr)，在集群列表中单击对应的集群 **ID/名称**进入集群详情页。
+2. 在集群详情页中选择**集群监控 > 日志搜索**可根据当前集群、日志文件、节点 IP 和时间范围条件过滤，查看日志内容。
 ![](https://main.qcloudimg.com/raw/e358af66750e3764ffcff9ce080cdb18.png)
-**查看上下文：**在排查问题的时候，经常需要关注关键词的上下文日志，在日志搜索结果列表中，选择【操作】>【查看上下文】，可以查看日志的上下文信息：
+**查看上下文：**在排查问题的时候，经常需要关注关键词的上下文日志，在日志搜索结果列表中，选择操作 > 查看上下文，可以查看日志的上下文信息：
 ![](https://main.qcloudimg.com/raw/d0b31ccf75bcf29b5c313747a205bc39.png)
 
 ## 日志搜索支持的服务类型
