Update and rename product/大数据与AI/弹性MapReduce/操作指南/集群监控及告警/配置告警.md to product/大数据与AI/弹性MapReduce/操作指南/监控告警/配置告警.md

--- a/product/大数据与AI/弹性MapReduce/操作指南/监控告警/配置告警.md
+++ b/product/大数据与AI/弹性MapReduce/操作指南/监控告警/配置告警.md
@@ -2,8 +2,8 @@
 弹性 MapReduce 已接入云监控，用户可在云监控控制台配置弹性 MapReduce 节点和服务监控指标的告警策略。
 
 ## 操作步骤
-1. 登录云监控控制台，选择左侧导航栏中的【告警配置】>【[告警策略](https://console.cloud.tencent.com/monitor/alarm2/policy)】。
-2. 在“告警策略”页面中，单击【新建】。
+1. 登录云监控控制台，选择左侧导航栏中的**告警配置 > [告警策略](https://console.cloud.tencent.com/monitor/alarm2/policy)**。
+2. 在“告警策略”页面中，单击**新建**。
 3. 在弹出的“新建告警策略”窗口中，参考下表说明配置基本信息、告警规则和新建通知模板。
 <table>
 <tr>
