--- a/product/大数据与AI/弹性MapReduce/操作指南/监控告警/集群事件.md
+++ b/product/大数据与AI/弹性MapReduce/操作指南/监控告警/集群事件.md
@@ -4,8 +4,8 @@
 - 事件策略：支持根据业务情况自定义事件监控触发策略，已开启监控的事件可设置为集群巡检项。
 
 ## 查看事件列表
-1. 登录 [弹性 MapReduce 控制台](https://console.cloud.tencent.com/emr)，在【集群列表】中单击对应的【集群ID/名称】进入集群详情页。
-2. 在集群详情页中选择【集群监控】>【集群事件】>【事件列表】，可直接查看当前集群所有操作事件。
+1. 登录 [弹性 MapReduce 控制台](https://console.cloud.tencent.com/emr)，在集群列表中单击对应的集群 **ID/名称**进入集群详情页。
+2. 在集群详情页中选择**集群监控 > 集群事件 > 事件列表**，可直接查看当前集群所有操作事件。
 ![](https://main.qcloudimg.com/raw/3e97621eafcf8ff5fd86fe47a9fb1190.png)
 严重程度如下：
  - 致命：节点或服务的异常事件，人工干预处理，否则服务不可用，这类事件可能持续一段时间。
@@ -13,8 +13,8 @@
  - 一般：记录集群发生的常规事件，一般无需特别处理。
 
 ## 设置事件策略
-1. 登录 [EMR 控制台](https://console.cloud.tencent.com/emr)，在【集群列表】中单击对应的【集群ID/名称】进入集群详情页。
-2. 在集群详情页中选择【集群监控】>【集群事件】>【事件策略】，可以自定义设置事件监控触发策略。
+1. 登录 [EMR 控制台](https://console.cloud.tencent.com/emr)，在集群列表中单击对应的集群 **ID/名称**进入集群详情页。
+2. 在集群详情页中选择**集群监控 > 集群事件 > 事件策略**，可以自定义设置事件监控触发策略。
 3. 事件配置列表包含：事件名、事件发现策略、严重程度（致命/严重/一般）、开启监控，支持修改和保存。
 ![](https://main.qcloudimg.com/raw/3a4879afe4313cd7443b6a676cf33a80.png)
 4. 事件发现策略分两类：一类事件为系统固定策略事件，不支持用户修改；另一类事件会因客户业务标准的不同而变化，支持用户设置。
