Update and rename product/大数据与AI/弹性MapReduce/操作指南/集群监控及告警/集群巡检.md to product/大数据与AI/弹性MapReduce/操作指南/监控告警/集群巡检.md

--- a/product/大数据与AI/弹性MapReduce/操作指南/监控告警/集群巡检.md
+++ b/product/大数据与AI/弹性MapReduce/操作指南/监控告警/集群巡检.md
@@ -8,8 +8,8 @@
 >?巡检系统支持服务巡检项，当前仅支持 hdfs、yarn、hbase、hive、zookeeper。
 
 ## 操作步骤
-1. 登录 [EMR 控制台](https://console.cloud.tencent.com/emr)，在【集群列表】中单击对应的【集群 ID/名称】进入集群详情页。
-2. 在集群详情页中选择【集群监控】>【集群巡检】可根据当前集群的节点和服务进行健康检查，每个集群仅可配置一个定期巡检任务，也可单击【即时巡检】进行巡检。配置定时巡检任务可单击【定时巡检设置】。
+1. 登录 [EMR 控制台](https://console.cloud.tencent.com/emr)，在集群列表中单击对应的集群 **ID/名称**进入集群详情页。
+2. 在集群详情页中选择**集群监控 > 集群巡检**可根据当前集群的节点和服务进行健康检查，每个集群仅可配置一个定期巡检任务，也可单击**即时巡检**进行巡检。配置定时巡检任务可单击**定时巡检设置**。
 ![](https://main.qcloudimg.com/raw/3331e79fdd0657e1b0459ad165a4ff93.png)
  - 即时巡检：即时巡检是检查集群从某个时刻到当前时间节点和服务的健康状态并生成巡检报告。
 ![](https://main.qcloudimg.com/raw/071b4719e1957f91121a9848fecb6d62.png)
