--- a/product/互联网中间件/TDMQ CMQ 版/05 操作指南/02 主题订阅/02 订阅管理.md
+++ b/product/互联网中间件/TDMQ CMQ 版/05 操作指南/02 主题订阅/02 订阅管理.md
@@ -23,28 +23,26 @@ Topic 向订阅者投递消息时，遵循以下原则：
 1. 登录 [TDMQ CMQ 版控制台](https://console.cloud.tencent.com/tdmq/cmq-queue)。
 2. 在左侧导航栏选择**主题订阅**，选择好地域，单击目标主题的“ID”，进入主题详情页面。
 3. 在页面上方选择**订阅者**页签，单击**新建**，填写订阅者相关信息
+<img src="https://main.qcloudimg.com/raw/ae9095b2ef8d56cf563dc272b40a5e29.png" width="550px">
+	
+	- 订阅者类型
+		- Queue 队列服务：订阅者可以选择一个 Queue，使用队列来接收发布的消息。
+		- URL 地址：订阅者也可以不与 Queue 结合，自己来处理消息。
+	- 添加订阅者标签：添加订阅者时，需增加 FilterTag。增加 FilterTag 后，该订阅者仅能收到带该 FilterTag 的消息，单个订阅者最多可添加5个 tag。只要其中某个 tag 能匹配 Topic 的过滤标签，订阅者即可收到该次 Topic 投递的消息，若消息不带任何标签，则该订阅者无法收到该类型消息。
+		- 标签：详细规则参考 [标签匹配功能说明](https://cloud.tencent.com/document/product/1496/61024)。
+		- 路由匹配：详细规则请参考 [路由键匹配功能说明](https://cloud.tencent.com/document/product/1496/61026)。
+	- 重试策略：主题发布消息之后，会自动将消息推送给订阅，当推送失败时，有两种重试策略：
+		- **退避重试**：重试3次，间隔时间为10 - 20s之间的一个随机值，超过3次后，该条消息对于该订阅者丢弃，不会再重试。
+		- **衰退指数重试**：重试176次，总计重试时间为1天，间隔时间依次为：2^0，2^1， …，512，512, …，512秒。默认为衰退指数重试策略。
 
-![](https://main.qcloudimg.com/raw/ae9095b2ef8d56cf563dc272b40a5e29.png)
-
-- 订阅者类型
-
-  - Queue 队列服务：订阅者可以选择一个 Queue，使用队列来接收发布的消息。
-  - URL地址：订阅者也可以不与 Queue 结合，自己来处理消息。
-- 添加订阅者标签：添加订阅者时，需增加 FilterTag。增加 FilterTag 后，该订阅者仅能收到带该 FilterTag 的消息，单个订阅者最多可添加5个 tag。只要其中某个 tag 能匹配 Topic 的过滤标签，订阅者即可收到该次 Topic 投递的消息，若消息不带任何标签，则该订阅者无法收到该类型消息。
-  - 标签：详细规则参考 [标签匹配功能说明]()。
-  - 路由匹配：详细规则请参考 [路由键匹配功能说明]()。
-- 重试策略：主题发布消息之后，会自动将消息推送给订阅，当推送失败时，有两种重试策略：
-  - **退避重试**：重试3次，间隔时间为10 - 20s之间的一个随机值，超过3次后，该条消息对于该订阅者丢弃，不会再重试。
-  - **衰退指数重试**：重试176次，总计重试时间为1天，间隔时间依次为：2^0，2^1， …，512，512, …，512秒。默认为衰退指数重试策略。
-
-4. 单击【提交】，在订阅者列表可以看到刚刚创建好的订阅者。
+4. 单击**提交**，在订阅者列表可以看到刚刚创建好的订阅者。
 
 ### 编辑订阅者
 
-在**[订阅者](https://console.cloud.tencent.com/tdmq/cmq-topic-detail)**列表页面，单击操作列的**编辑**，可修改订阅者属性。
+在 **[订阅者](https://console.cloud.tencent.com/tdmq/cmq-topic-detail)** 列表页面，单击操作列的**编辑**，可修改订阅者属性。
 
-> ?仅支持修改订阅者的**消息过滤标签**和**重试策略**。
+>?仅支持修改订阅者的**消息过滤标签**和**重试策略**。
 
 ### 删除订阅者
 
-在**[订阅者](https://console.cloud.tencent.com/tdmq/cmq-topic-detail)**列表页面，单击操作列的**删除**，可删除订阅者。
+在 **[订阅者](https://console.cloud.tencent.com/tdmq/cmq-topic-detail)** 列表页面，单击操作列的**删除**，可删除订阅者。
