--- a/product/互联网中间件/TDMQ CMQ 版/05 操作指南/02 主题订阅/03 查看监控.md
+++ b/product/互联网中间件/TDMQ CMQ 版/05 操作指南/02 主题订阅/03 查看监控.md
@@ -6,17 +6,16 @@
 
 1. 登录 [TDMQ CMQ 版控制台](https://console.cloud.tencent.com/tdmq/cmq-queue)。
 2. 在左侧导航栏选择**主题订阅**，选好好**地域**后，单击目标主题的“ID”，进入主题详情页面。
-
 3. 在主题详情页面，选择页面上方的**监控**页签。
 
-监控指标说明
+监控指标说明：
 
 | 监控指标             | 说明                                                         |
 | -------------------- | ------------------------------------------------------------ |
-| 生产速率（条/秒）    | 在所选时间范围中，本** Topic？** 下所有生产者某一秒内生产消息的数量 |
-| 消费速率（条/秒）    | 在所选时间范围中，本** Topic？** 下所有消费者某一秒内消费消息的数量 |
-| 生产流量（字节/秒）  | 在所选时间范围内某一秒，本** Topic？**下所有生产者生产的消息数据量大小 |
-| 消费流量（字节/秒）  | 在所选时间范围内某一秒，本** Topic？**下所有消费者消费的消息数据量大小 |
+| 生产速率（条/秒）    | 在所选时间范围中，本 **Topic** 下所有生产者某一秒内生产消息的数量 |
+| 消费速率（条/秒）    | 在所选时间范围中，本 **Topic** 下所有消费者某一秒内消费消息的数量 |
+| 生产流量（字节/秒）  | 在所选时间范围内某一秒，本 **Topic** 下所有生产者生产的消息数据量大小 |
+| 消费流量（字节/秒）  | 在所选时间范围内某一秒，本 **Topic** 下所有消费者消费的消息数据量大小 |
 | 消息总大小（字节）   | 消息当前总数据量大小                                         |
 | 消息平均大小（字节） | 消息当前平均数据量大小                                       |
 | 消息总数量（个）     | 消息当前总数量                                               |
