--- a/product/移动与通信/云开发低代码平台/快速入门/组件接入控制台.md
+++ b/product/移动与通信/云开发低代码平台/快速入门/组件接入控制台.md
@@ -8,7 +8,7 @@
 <div style="background-color:#00A4FF; width: 180px; height: 35px; line-height:35px; text-align:center;"><a href="https://console.cloud.tencent.com/lowcode" target="_blank"  style="color: white; font-size:16px;">腾讯云微搭低代码控制台</a></div>
 
 ### 创建组件库
-1. 在微搭控制台，单击组件库管理—新建组件库。
+1. 在微搭控制台，进入**组件库管理**页面，单击**新建组件库**。
 ![](https://main.qcloudimg.com/raw/0fa9634ad2e34499437caf9124f10ffd.png)
 2. 在组件库中，包含发布组件库、添加组件和导入组件三种选项：
 	- 发布组件库：将组件库从编辑状态变为发布状态。
