--- a/product/数据库/图数据库EasyGraph/图数据管理/图库管理/图库管理概述.md
+++ b/product/数据库/图数据库EasyGraph/图数据管理/图库管理/图库管理概述.md
@@ -1,9 +1,10 @@
-本文为您概述介绍登录 KonisGraph 实例的图数据管理平台后，如何进行图库管理。
+本文为您介绍登录 KonisGraph 实例的图数据管理平台后，如何进行图库管理。
+
 ## 图库管理概述
-登录【图数据管理平台】，单击顶部导航中的【图库管理】，进入图库管理页面，用户可新建、编辑、删除图库的元数据，如点/边/属性等。
- - 图库管理-属性列表
-![](https://main.qcloudimg.com/raw/4e18ae24f3f646c2c8cf865021d5d8aa.png)
- - 图库管理-点列表
-![](https://main.qcloudimg.com/raw/7b7bbb833db8f291f9a2c12ffa9b7787.png)
- - 图库管理-边列表
-![](https://main.qcloudimg.com/raw/1bd133bbd88a28467fa949ef2435f1b0.png)
+登录 [图数据管理平台](https://cloud.tencent.com/document/product/1366/61194#dltsjk)，单击顶部导航中的**图库管理**，进入图库管理页面，用户可新建、编辑、删除图库的元数据，如点/边/属性等。
+ - 图库管理 - 属性列表
+![](https://main.qcloudimg.com/raw/b078d3f63b65e15ffb224177d2e406e2.png)
+ - 图库管理 - 点列表
+![](https://main.qcloudimg.com/raw/6491f7b1b18c788e411471d47756be03.png)
+ - 图库管理 - 边列表
+![](https://main.qcloudimg.com/raw/2106d07a74f51bf2cd2db610f8ad2ac1.png)
