--- a/product/解决方案/微信云支付/收银台使用手册/插件收银.md
+++ b/product/解决方案/微信云支付/收银台使用手册/插件收银.md
@@ -29,7 +29,7 @@
 “收银窗口显示备注”和“收银窗口显示流水号”都选择“是”，收银人员可在收银时填写“备注”和“流水号”，“备注”中填写付款原因，“流水号”中填写收银软件的流水号，可关联收银软件订单。
 ![](https://main.qcloudimg.com/raw/1cdc2dce79d2fe1afedbc1d8cac58531.png)
 - 语音播报
-单击【点击测试】测试语音播报。
+单击**点击测试**测试语音播报。
 ![](https://main.qcloudimg.com/raw/8efc88602ce2898178d1df1af2762961.png)
  - 刷卡支付语音播报：刷卡支付成功后是否开启语音播报。
  - 播报交易类型：语音播报时是否播报交易类型，如刷卡支付、一码支付。
@@ -58,14 +58,14 @@
 ## 插件模式下管理员支付测试
 管理员可在收银台配置成功后测试支付是否成功。如果管理员已配置以下内容，可进行支付测试。
 1. 基础设置。
-2. 收银设置的使用设置【扫码拉起收银窗口】。
-3. 收银设置的使用设置【自动抓取支付金额】（设置抓取收银软件的金额位置）。
-4. 收银设置的使用设置【刷卡支付语音播报】。
-5. 打印机设置【打印机基本设置】。
-6. 打印机设置【刷卡支付自动打印小票】。
+2. 收银设置的使用设置**扫码拉起收银窗口**。
+3. 收银设置的使用设置**自动抓取支付金额**（设置抓取收银软件的金额位置）。
+4. 收银设置的使用设置**刷卡支付语音播报**。
+5. 打印机设置**打印机基本设置**。
+6. 打印机设置**刷卡支付自动打印小票**。
  - 用扫码枪扫手机微信付款码会自动拉起收银窗口，如下图：
  ![](https://main.qcloudimg.com/raw/9c7ab751046b8c722d0611c2c210e1de.png)
- - 管理员确认图片支付金额后，按回车键完成支付（可在【收银设置】>【支付设置】中设置），提示微信支付收款成功，如下图：
+ - 管理员确认图片支付金额后，按回车键完成支付（可在**收银设置**>**支付设置**中设置），提示微信支付收款成功，如下图：
  ![](https://main.qcloudimg.com/raw/912c425f5730656f74979d382b195724.png)
  - 支付成功后会打印小票和语音播报，小票信息（其中小票打印的字段可以在设置中配置）如下图：
 ![](https://main.qcloudimg.com/raw/3ce27dc0fbfe521f3c2c071a32f40ff1.jpg)
