--- a/product/解决方案/微信云支付/收银台使用手册/插件收银.md
+++ b/product/解决方案/微信云支付/收银台使用手册/插件收银.md
@@ -65,7 +65,7 @@
 6. 打印机设置**刷卡支付自动打印小票**。
  - 用扫码枪扫手机微信付款码会自动拉起收银窗口，如下图：
  ![](https://main.qcloudimg.com/raw/9c7ab751046b8c722d0611c2c210e1de.png)
- - 管理员确认图片支付金额后，按回车键完成支付（可在**收银设置**>**支付设置**中设置），提示微信支付收款成功，如下图：
+ - 管理员确认图片支付金额后，按回车键完成支付（可在**收银设置 > 支付设置**中设置），提示微信支付收款成功，如下图：
  ![](https://main.qcloudimg.com/raw/912c425f5730656f74979d382b195724.png)
  - 支付成功后会打印小票和语音播报，小票信息（其中小票打印的字段可以在设置中配置）如下图：
 ![](https://main.qcloudimg.com/raw/3ce27dc0fbfe521f3c2c071a32f40ff1.jpg)
