TKE Edge: Add note of join gpu cvm

--- a/product/计算与网络/容器服务/边缘集群指南/边缘集群管理/节点管理.md
+++ b/product/计算与网络/容器服务/边缘集群指南/边缘集群管理/节点管理.md
@@ -152,6 +152,8 @@ kubectl label nodes ${NODE_NAME} nvidia-device-enable-
 
 以上相应系统带 **NVIDIA 系列 **GPU 版本边缘集群会默认安装 GPU 驱动，其他系统用户可自行安装相应 GPU 驱动。
 
+>    注意：添加带GPU的CVM系统版本是[边缘节点系统](#createCVMNode) 的子集，要是边缘节点的系统不支持，添加节点可能会失败，请遵守[边缘节点的系统](#createCVMNode) 要求。
+
 #### 2. 脚本添加带 GPU 的 CVM 节点
 
 用脚本添加的边缘节点边缘集群不负责安装 GPU 驱动，GPU 驱动用户可自行安装。
