TKE Edge: Add note of join gpu cvm system version

--- a/product/计算与网络/容器服务/边缘集群指南/边缘集群管理/节点管理.md
+++ b/product/计算与网络/容器服务/边缘集群指南/边缘集群管理/节点管理.md
@@ -128,9 +128,9 @@ kubectl label nodes ${NODE_NAME} nvidia-device-enable-
 
 >   其中 ${NODE_NAME} 为节点名字
 
-#### 1. 添加带 **NVIDIA 系列 **GPU 的 CVM 节点
+#### 1. 腾讯云可支持带 GPU 的边缘节点操作系统如下
 
-目前支持的 **NVIDIA 系列 **GPU 版本：
+支持的 **NVIDIA 系列 **GPU 版本：
 
 -   [GN6](https://cloud.tencent.com/document/product/560/19700#GN6GN6S)
 
@@ -139,7 +139,7 @@ kubectl label nodes ${NODE_NAME} nvidia-device-enable-
 -   [GN10X](https://cloud.tencent.com/document/product/560/19700#GN10XGN10Xp)、[GN10Xp](https://cloud.tencent.com/document/product/560/19700#GN10XGN10Xp)
 -   [GI3X](https://cloud.tencent.com/document/product/560/19700#GI3X)
 
-目前支持的Linux系统:
+支持的Linux系统:
 
 -   CentOS 7.2 64位
 -   CentOS 7.6 64位
@@ -152,9 +152,9 @@ kubectl label nodes ${NODE_NAME} nvidia-device-enable-
 
 以上相应系统带 **NVIDIA 系列 **GPU 版本边缘集群会默认安装 GPU 驱动，其他系统用户可自行安装相应 GPU 驱动。
 
->    注意：添加带GPU的CVM系统版本是[边缘节点系统](#createCVMNode) 的子集，要是边缘节点的系统不支持，添加节点可能会失败，请遵守[边缘节点的系统](#createCVMNode) 要求。
-
 #### 2. 脚本添加带 GPU 的 CVM 节点
 
 用脚本添加的边缘节点边缘集群不负责安装 GPU 驱动，GPU 驱动用户可自行安装。
+
+>   **注意：**添加带GPU的CVM系统版本是[边缘节点系统](#createCVMNode) 的子集，要是边缘节点的系统不支持，添加节点可能会失败，请遵守[边缘节点的系统](#createCVMNode)要求。
 
