feat: 增加lut滤镜说明文档

--- a/product/视频服务/云剪辑/50-开发指南/50-视频合成协议/40-典型案例.md
+++ b/product/视频服务/云剪辑/50-开发指南/50-视频合成协议/40-典型案例.md
@@ -1,4 +1,39 @@
 
+## 使用公共滤镜
+```js
+/**
+* 对一个已有的视频/图片轨道元素应用一个lut滤镜素材:
+* 1. 通过素材ID创建视频/图片元素
+* 2. 应用lut滤镜效果
+* 3. 创建轨道，并装填轨道
+* 4. 得到一个可预览协议
+**/
+async function demo0() {
+  let trackItems = await YJPlayerHelper.CMEUtils.createTrackItem(
+    ['materialId1','materialId2','materialId3']
+  );
+  for(let i = 0 ; i <trackItems.length; ++i ){
+    /**
+    * 胶片滤镜应用，胶片滤镜ID 为 '5fd329e702af8755735859a1@Public@CME'
+    * 全部滤镜查看请到[这里](https://cloud.tencent.com/document/product/1156/51227#image-filter-lut)
+    ***/
+   await YJPlayerHelper.TrackItem.lut(trackItems[i], '5fd329e702af87557358599f@Public@CME')
+  }
+
+  let track = YJPlayerHelper.Track.create({
+    type: "video",
+  });
+  trackItems.forEach((element) => {
+    YJPlayerHelper.Track.append(track, element);
+  });
+  console.log("track:", track);
+  let resultData = [track];
+  console.log(resultData);
+  return resultData;
+}
+
+```
+
 ## 多个视频首尾衔接
  
 ```js
