--- a/product/管理与支持/账号相关/实名认证/管理认证信息/变更法人信息.md
+++ b/product/管理与支持/账号相关/实名认证/管理认证信息/变更法人信息.md
@@ -11,14 +11,14 @@
 ## 操作步骤
 
 1. 登录腾讯云控制台，进入 [实名认证](https://console.cloud.tencent.com/developer/auth) 页面。
-2. 在“您已完成企业实名认证”栏中，选择**修改认证主体**。
-![](https://main.qcloudimg.com/raw/b00a89c9791a66f5d86cc0a1fdf6c223.png)
-3. 在修改企业实名认证页面，单击【开始修改】。
-![](https://main.qcloudimg.com/raw/21997f0ffbeaaca4d20a3a45281c3fb6.png)
+2. 在“您已完成企业实名认证”栏中，单击**修改认证主体**或**更新法人信息**。
+![](https://main.qcloudimg.com/raw/57a1faaefc11131cbadb905db42f4754.png)
+3. 在修改企业实名认证页面，单击**开始修改**。
+![](https://main.qcloudimg.com/raw/9c51d67ec2ab4bde65aa28f22cfdd5dc.png)
 4. 在选择变更类型页面，选择**更新企业法人信息**，单击**下一步**。
 ![](https://main.qcloudimg.com/raw/1f72332e439a715cf55dec457175523c.png)
-5. 填写变更后的法人实名信息，即企业法人姓名与企业法人身份证号，单击**下一步**。
-![](https://main.qcloudimg.com/raw/d0342140fd783c3b6ca474bae7ac0025.png)
+5. 填写变更后的法人实名信息，即企业名称、社会信用代码和通讯地址，单击**下一步**。
+![](https://main.qcloudimg.com/raw/dede9f7a9d3812ec445f1f6543f50fa0.png)
 6. 根据实际需求，选择认证方式。
  - 选择**微信扫码**：打开企业法人个人微信扫描页面的小程序码，通过信息确认即可完成变更。
 ![](https://main.qcloudimg.com/raw/ea0e52a721b222a8c9e25a2dbdd58e60.png)
