--- a/product/企业应用/云桌面/操作指南/终端用户/打开云桌面.md
+++ b/product/企业应用/云桌面/操作指南/终端用户/打开云桌面.md
@@ -2,7 +2,7 @@
 >?为了获得更好的云桌面访问体验，建议您使用 [客户端](#Client) 访问。
 
 ## 快速访问
->?**快速访问模式需要您的浏览器需要支持 HTML5 Web 浏览器**。
+>?**快速访问模式需要您的浏览器支持 HTML5 Web 浏览器**。
 
 1. 选择您需要访问的云桌面。
 ![](https://main.qcloudimg.com/raw/0b5a2f4384c4430e0eb41b32b4872ffa.png)
