更新保留配额

--- a/product/计算与网络/无服务器云函数/操作指南/并发管理/并发概述.md
+++ b/product/计算与网络/无服务器云函数/操作指南/并发管理/并发概述.md
@@ -68,11 +68,11 @@
 
 为了您更准确的进行并发管理，云函数的并发配额按照内存为单位计算。例如256MB的并发配额代表着1个256MB内存的并发实例，或者是2个128MB内存的并发实例。
 
-### 保留配额
+### 最大独占配额
 
-当您为一个函数设置保留配额，将会有以下两个效果：
+当您为一个函数设置最大独占配额，将会有以下两个效果：
 
-- 保留配额是**此函数的并发额度上限**，所有版本的并发额度加和小于等于保留配额。
+- 最大独占配额是**此函数的并发额度上限**，所有版本的并发额度加和小于等于最大独占配额。
 - 并发额度划给该函数后为**函数独享**，不再提供给其它函数。
 
 
@@ -84,7 +84,7 @@
 
 ## 使用场景
 
-通过综合使用保留配额、预置并发等能力，您可以灵活调配多个函数间的资源用量情况，并按需预热函数。
+通过综合使用最大独占配额、预置并发等能力，您可以灵活调配多个函数间的资源用量情况，并按需预热函数。
 
 ### 共享配额
 
@@ -92,7 +92,7 @@
 
 ### 并发保障
 
-如果有某个函数的业务功能比较敏感或关键，需要尽力保障请求的成功率，此时可以使用保留配额。保留配额可以给到函数独享额度，确保并发的可靠性，不会由于多函数的争抢导致的调用并发超限。
+如果有某个函数的业务功能比较敏感或关键，需要尽力保障请求的成功率，此时可以使用最大独占配额。最大独占配额可以给到函数独享额度，确保并发的可靠性，不会由于多函数的争抢导致的调用并发超限。
 
 ### 预置并发
 
