--- a/product/计算与网络/私有网络2018-09-13/操作指南（新）/安全管理/参数模板/管理参数模板.md
+++ b/product/计算与网络/私有网络2018-09-13/操作指南（新）/安全管理/参数模板/管理参数模板.md
@@ -1,7 +1,7 @@
 本章节介绍如何在控制台创建维护参数模板（IP 地址、IP 地址组、协议端口、协议端口组），及参数模板在安全组中的使用。
 
 
-## 创建参数模板并在安全组中引用
+## 创建参数模板
 
 ### 创建 IP 地址参数模板
 将具有相同诉求或频繁编辑诉求的 IP 加入到该 IP 地址对象中。
@@ -49,33 +49,36 @@
 2. 在弹出框中，填写名称和选择需要添加的协议端口对象，单击**提交**即可。
 	![](https://main.qcloudimg.com/raw/95372c46d62462aa8603ea33c8c05f70.png)
 
-### 在安全组中引用参数模板
+## 修改参数模板
+如需对创建的参数模板进行修改，例如，增加/删除 IP 地址、增加/删除协议端口，可按照如下步骤操作。
+
+### 操作步骤
+1. 单击已创建的 IP 地址、IP 地址组、协议端口，或协议端口组参数模板，右侧的“编辑”，例如，下图为修改IP地址对象。
+    ![](https://main.qcloudimg.com/raw/71372f50908fb1fdf184883e6cac7841.png)
+2. 在弹出的编辑对话框中，修改相应参数，并单击**提交**即可。
+   
+## 删除参数模板
+如不需要使用参数模板，可将其删除，删除后，所有包含此参数模板的安全组中的策略配置将一同删除，请评估后谨慎操作。
+
+### 操作步骤
+1. 单击已创建的参数模板右侧的**删除**。
+   ![](https://main.qcloudimg.com/raw/602e843cb25db7a4b6ab59cc31cb098d.png)
+2. 删除后，所有包含此 IP 地址、或协议端口的策略将一同删除，确认无误后，在弹出的删除确认框中继续单击**删除**。
+
+## 在安全组中引用参数模板
 参数模板创建后，可直接在安全组添加规则时引用参数模板来快速添加IP来源或协议端口，提高安全组规则的添加效率。
-#### 操作步骤
+
+### 操作步骤
 1. 登录 [私有网络控制台](https://console.cloud.tencent.com/vpc)。
 2. 单击左侧目录中的**安全**>**安全组**，进入管理页面。
 3. 在列表中，找到需要引用参数模板的安全组，单击其 ID，进入详情页。
 4. 在入站 / 出站规则标签页中，单击**添加规则**。
 5. 在弹出框中，选择“自定义”类型，在“来源”、“协议端口”中选择已创建的参数模板，并单击“完成”。添加入站 / 出站规则的详细步骤，请参见 [添加安全组规则](https://cloud.tencent.com/document/product/215/39790)。
 >?后续如需增加新的 IP 地址或协议端口，仅需在对应 IP 地址组或协议端口组中增加即可，无须修改安全组规则或新建安全组。
-
+>
  ![](https://main.qcloudimg.com/raw/c52a0f860b2796bacbbf11a1b0a6ad55.png)
 
-	
-## 修改参数模板
-如需对创建的参数模板进行修改，例如，增加/删除IP地址、增加/删除协议端口，可按照如下步骤操作。
-
-### 操作步骤
-1. 单击已创建的IP地址、IP地址组、协议端口，或协议端口组参数模板，右侧的“编辑”，例如，下图为修改IP地址对象。
-    ![](https://main.qcloudimg.com/raw/71372f50908fb1fdf184883e6cac7841.png)
-2. 在弹出的编辑对话框中，修改相应参数，并单击**提交**即可。
-   
-## 删除参数模板
-1. 单击已创建的参数模板右侧的**删除**。
-   ![](https://main.qcloudimg.com/raw/602e843cb25db7a4b6ab59cc31cb098d.png)
-2. 删除后，所有包含此IP地址、或协议端口的策略将一同删除，确认无误后，在弹出的删除确认框中继续单击**删除**。
-
-## 查看关联
+## 查看关联安全组
 您可参考如下步骤，查看引用参数模板的所有安全组实例。
 1. 单击已创建的参数模板右侧的**查看关联**。
     ![](https://main.qcloudimg.com/raw/df588aa0a187e3b96814f6f42f252a2a.png)
