--- a/product/视频服务/云剪辑/50-开发指南/50-视频合成协议/40-典型案例.md
+++ b/product/视频服务/云剪辑/50-开发指南/50-视频合成协议/40-典型案例.md
@@ -1,4 +1,10 @@
 
+>! 使用前请通过CDN引入库方法，目前最新版本为`2.1.1`。
+
+```html
+<script src="https://vs-cdn.tencent-cloud.com/sdk/yj-player-helper-2.1.1.js"></script>
+```
+
 ## 使用公共滤镜
 ```js
 /**
