--- a/product/移动与通信/移动解析/开发者手册/加密指引.md
+++ b/product/移动与通信/移动解析/开发者手册/加密指引.md
@@ -3,7 +3,7 @@
 
 >? 使用 HTTPS 请求方式查询，传输的数据会因为 TLS 通道而被加密保护，因此不需要主动对传入的数据额外加密。
 ## 前提条件
-- [已开通移动解析 HTTPDNS](https://cloud.tencent.com/document/product/379/54577) 并已获取授权 ID 和加密密钥及 HTTPS Token 等配置信息。详情可参见 [获取配置信息](https://cloud.tencent.com/document/product/379/61203)。
+- [已开通移动解析 HTTPDNS](https://cloud.tencent.com/document/product/379/54577) 并已获取授权 ID 和加密密钥及 HTTPS Token 等配置信息。详情可参见 [配置信息说明](https://cloud.tencent.com/document/product/379/61203)。
 - 已在移动解析 HTTPDNS 控制台添加需要查询的域名。详情可参见 [添加域名](https://cloud.tencent.com/document/product/379/54588)。
 
 ## 操作流程
