--- a/product/监控与管理/应用性能观测/购买指南/购买方式.md
+++ b/product/监控与管理/应用性能观测/购买指南/购买方式.md
@@ -3,8 +3,8 @@
 ## 购买方式
 ### 创建业务系统
 1. 登录 [应用性能观测控制台](https://console.cloud.tencent.com/apm/monitor)。
-2. 在左侧菜单栏中单击【资源管理】，进入资源管理页面。
-3. 在页面中单击【新建】，按照提示填写业务名称，并选择存储时长（存储时长越长，计费越高）。选择完后，单击【确定】。
+2. 在左侧菜单栏中单击**资源管理**，进入资源管理页面。
+3. 在页面中单击**新建**，按照提示填写业务名称，并选择存储时长（存储时长越长，计费越高）。选择完后，单击**确定**。
 ![](https://main.qcloudimg.com/raw/146be1e5e46c09f4664ebe9ff6e8fa24.png)
 
 ### 接入应用
