--- a/product/管理与支持/账号相关/常见问题/实名认证相关/变更认证方面.md
+++ b/product/管理与支持/账号相关/常见问题/实名认证相关/变更认证方面.md
@@ -41,7 +41,14 @@
 
 ### 如何修改企业法人？
 
-在 [实名认证](https://console.cloud.tencent.com/developer/auth) 页面，单击**修改认证主体**或**更新法人信息**，通过重新实名认证修改企业名称。详情请参见 [变更法人信息](https://cloud.tencent.com/document/product/378/60997) 文档。
+1. 在 [实名认证](https://console.cloud.tencent.com/developer/auth) 页面，单击**修改认证主体**或**更新法人信息**。
+2. 在修改企业实名认证页面，单击**开始修改**。
+![](https://main.qcloudimg.com/raw/9c51d67ec2ab4bde65aa28f22cfdd5dc.png)
+3. 在选择变更类型页面，选择**更新企业法人信息**，单击**下一步**。
+![](https://main.qcloudimg.com/raw/1f72332e439a715cf55dec457175523c.png)
+4. 填写变更后的法人实名信息，即企业名称、社会信用代码和通讯地址，单击**下一步**。
+![](https://main.qcloudimg.com/raw/dede9f7a9d3812ec445f1f6543f50fa0.png)
+5. 根据页面提示，完成认证即可。
 
 
 
