--- a/product/计算与网络/容器服务/边缘集群指南/边缘集群管理/节点管理.md
+++ b/product/计算与网络/容器服务/边缘集群指南/边缘集群管理/节点管理.md
@@ -126,14 +126,13 @@ kubectl label nodes ${NODE_NAME} nvidia-device-enable=enable
 kubectl label nodes ${NODE_NAME} nvidia-device-enable-
 ```
 
->   其中 ${NODE_NAME} 为节点名字
+>?   其中 ${NODE_NAME} 为节点名称。
 
 #### 1. 腾讯云可支持带 GPU 的边缘节点操作系统如下
 
 支持的 NVIDIA 系列 GPU 版本：
 
 -   [GN6](https://cloud.tencent.com/document/product/560/19700#GN6GN6S)
-
 -   [GN7](https://cloud.tencent.com/document/product/560/19700#GN7)
 -   [GN8](https://cloud.tencent.com/document/product/560/19700#GN8)
 -   [GN10X](https://cloud.tencent.com/document/product/560/19700#GN10XGN10Xp)、[GN10Xp](https://cloud.tencent.com/document/product/560/19700#GN10XGN10Xp)
@@ -156,5 +155,5 @@ kubectl label nodes ${NODE_NAME} nvidia-device-enable-
 
 用脚本添加的边缘节点边缘集群不负责安装 GPU 驱动，GPU 驱动用户可自行安装。
 
->   注意：添加带GPU的CVM系统版本是[边缘节点系统](#createCVMNode) 的子集，要是边缘节点的系统不支持，添加节点可能会失败，请遵守[边缘节点的系统](#createCVMNode)要求。
+>! 添加带 GPU 的 CVM 系统版本是 [边缘节点系统](#createCVMNode) 的子集，若边缘节点的系统不支持，添加节点可能会失败，请遵守 [边缘节点的系统](#createCVMNode) 要求。
 
