--- a/product/监控与管理/应用性能观测/服务协议/服务等级协议.md
+++ b/product/监控与管理/应用性能观测/服务协议/服务等级协议.md
@@ -1,6 +1,6 @@
-﻿﻿**为使用腾讯云应用性能观测服务（以下简称“本服务”），您应当阅读并遵守《应用性能观测服务等级协议》（以下简称“本协议”或“SLA”），以及《**[**腾讯云服务协议**](https://cloud.tencent.com/document/product/301/1967)**》。本协议包含本服务的术语和定义、服务可用性/服务成功率等级指标、赔偿方案、免责条款等相关内容。请您务必审慎阅读、充分理解各条款内容，限制、免责条款或者其他涉及您重大权益的条款可能会以加粗、加下划线等形式提示您重点注意。**
+**为使用腾讯云应用性能观测服务（以下简称“本服务”），您应当阅读并遵守《应用性能观测服务等级协议》（以下简称“本协议”或“SLA”），以及《**[**腾讯云服务协议**](https://cloud.tencent.com/document/product/301/1967)**》。本协议包含本服务的术语和定义、服务可用性/服务成功率等级指标、赔偿方案、免责条款等相关内容。请您务必审慎阅读、充分理解各条款内容，限制、免责条款或者其他涉及您重大权益的条款可能会以加粗、加下划线等形式提示您重点注意。**
 
-**除非您已充分阅读、完全理解并接受本协议所有条款，否则，请您不要购买本服务。您单击“同意”、“下一步”或您的购买、使用等行为或者您以其他任何明示或者默示方式表示接受本协议的，即视为您已阅读并同意本协议的约束。本协议即在您与腾讯云之间产生法律效力，成为对双方均具有约束力的法律文件。**
+**除非您已充分阅读、完全理解并接受本协议所有条款，否则，请您不要购买本服务。您点击“同意”、“下一步”或您的购买、使用等行为或者您以其他任何明示或者默示方式表示接受本协议的，即视为您已阅读并同意本协议的约束。本协议即在您与腾讯云之间产生法律效力，成为对双方均具有约束力的法律文件。**
 
  
 
@@ -49,7 +49,7 @@ APM 服务器接收失败的请求，视为失败请求。
 
 对于本服务，如服务可用性低于标准，您有权按照如下条款约定获得赔偿：
 
-### 3.1 赔偿标准
+#### 3.1 赔偿标准
 
 （1）赔偿以腾讯云**发放代金券**的形式实现，您应当遵守代金券的使用规则（包括使用期限等，具体以腾讯云官网发布的代金券相关规则为准）**。**发放的代金券不能折现、不开具发票，仅限您通过您的腾讯云账户购买本服务，不能购买其他的腾讯云服务，您也不可以将代金券进行转让、赠予等。
 
@@ -61,7 +61,7 @@ APM 服务器接收失败的请求，视为失败请求。
 | 低于99%但等于或高于95%   | 月度服务费的25%  |
 | 低于95%                  | 月度服务费的100% |
 
-### 3.2 赔偿申请时限
+#### 3.2 赔偿申请时限
 
 （1）如某服务月度没有达到服务可用性标准，您可以在没有达标的相应服务月度结束后的次月的第五（5）个工作日后，**仅通过您相应账户的工单系统提出赔偿申请。**您提出赔偿申请后腾讯云会进行相应核实，对于服务月度的服务可用性的计算，若双方出现争议的，**双方均同意最终以腾讯云的后台记录为准。**
 
