--- a/product/数据库/图数据库EasyGraph/图数据管理/图分析/图可视化分析交互/图可视化分析交互概述.md
+++ b/product/数据库/图数据库EasyGraph/图数据管理/图分析/图可视化分析交互/图可视化分析交互概述.md
@@ -1,4 +1,6 @@
-本文为您概述介绍在 KonisGraph 实例图数据管理平台的图分析中，如何进行图可视化分析交互。
+本文为您介绍在 KonisGraph 实例图数据管理平台的图分析中，如何进行图可视化分析交互。
 
 ## 图可视化分析交互概述
-在【图分析】的图数据查询、图数据分析、内置案例模块，均可对图数据进行可视化渲染和分析，主要包括基本交互、外观、布局、查询、历史、统计、异构图等。
+在**图分析**的图数据查询、图数据分析、内置案例模块，均可对图数据进行可视化渲染和分析，主要包括基本交互、外观、布局、查询、历史、统计、异构图等。
+
+![](https://main.qcloudimg.com/raw/22fe497db69658078a62613f49baebc5.png)
