--- a/product/计算与网络/容器服务/边缘集群指南/边缘集群管理/节点管理.md
+++ b/product/计算与网络/容器服务/边缘集群指南/边缘集群管理/节点管理.md
@@ -112,9 +112,9 @@ Flags:
 1. 通过边缘集群 K8S 所管理的边缘节点，当前节点上权限默认设置为 system:node，关于 system:node 权限的说明请参考 [Using Node Authorization](https://kubernetes.io/docs/reference/access-authn-authz/node/)。
 2. 在边缘节点上的 kubeconfig 文件将默认使用 system:node 权限，如需获取集群凭证用以操作集群，请参考 [连接集群](https://cloud.tencent.com/document/product/457/42894)。
 
-### 边缘节点带GPU相关
+### 边缘节点带 GPU 相关
 
-边缘集群中已经提交了一个 **nvidia-device-plugin** 的 DaemonSet，镜像版本 `nvidia-device-plugin:v0.9.0`，边缘节点要是需要，可执行如下命令边便会自动部署到相应节点：
+边缘集群中已经提交了一个 **nvidia-device-plugin** 的 DaemonSet，镜像版本 `nvidia-device-plugin:v0.9.0`，若边缘节点需要部署 DaemonSet，可执行如下命令自动部署到相应节点：
 
 ```shell
 kubectl label nodes ${NODE_NAME} nvidia-device-enable=enable
