--- a/product/计算与网络/容器服务/边缘集群指南/边缘集群管理/节点管理.md
+++ b/product/计算与网络/容器服务/边缘集群指南/边缘集群管理/节点管理.md
@@ -114,7 +114,7 @@ Flags:
 
 ### 边缘节点带 GPU 相关
 
-边缘集群中已经提交了一个 **nvidia-device-plugin** 的 DaemonSet，镜像版本 `nvidia-device-plugin:v0.9.0`，若边缘节点需要部署 DaemonSet，可执行如下命令自动部署到相应节点：
+边缘集群中已经提交了一个 **nvidia-device-plugin** 的 DaemonSet，镜像版本 `nvidia-device-plugin:v0.9.0`，若边缘节点需要部署 DaemonSet，执行以下命令便可自动部署到相应节点：
 
 ```shell
 kubectl label nodes ${NODE_NAME} nvidia-device-enable=enable
