--- a/product/计算与网络/容器服务/边缘集群指南/边缘集群管理/节点管理.md
+++ b/product/计算与网络/容器服务/边缘集群指南/边缘集群管理/节点管理.md
@@ -120,7 +120,7 @@ Flags:
 kubectl label nodes ${NODE_NAME} nvidia-device-enable=enable
 ```
 
-取消可这执行如下命令：
+取消可执行如下命令：
 
 ```shell
 kubectl label nodes ${NODE_NAME} nvidia-device-enable-
