--- a/product/视频服务/实时音视频/购买指南/视频互动直播计费说明.md
+++ b/product/视频服务/实时音视频/购买指南/视频互动直播计费说明.md
@@ -221,7 +221,7 @@ TRTC 后付费有 [日结](#daily) 和 [月结](#monthly) 两种结算周期：
   - B 接收 C 的费用 = 超清时长单价 × 超清时长 = 105元/千分钟 × (30分钟 / 1000）= 3.15 元
   - B 产生的费用为 = B 接收 A 的费用 +  B 接收 C 的费用 = 0.42 + 3.15 = 3.57元
 
-- C 产生的用来及费用：
+- C 产生的用量及费用：
   -  **C 产生的费用 = C 接收 A 的费用 +  C 接收 B 的费用**
   -  C 接收 A 的费用 = 标清视频时长 × 标清时长 = 14元/千分钟 × (30分钟 / 1000) =0.42 元
   -  C 接收 B 的费用 = 语音时长单价 × 语音时长 = 7元/千分钟 × (30分钟 / 1000）= 0.21 元
