--- a/product/数据库/图数据库EasyGraph/图数据管理/图分析/图可视化分析交互/基本交互.md
+++ b/product/数据库/图数据库EasyGraph/图数据管理/图分析/图可视化分析交互/基本交互.md
@@ -1,10 +1,10 @@
-本文为您概述介绍在 KonisGraph 实例图数据管理平台的图分析中，如何进行图可视化分析的【基本交互】。
+本文为您介绍在 KonisGraph 实例图数据管理平台的图分析中，如何进行图可视化分析的基本交互。
 
 ## 基本交互概述
 图可视分析系统的核心要素包括用户交互。利用交互，用户可以获得与系统互动的能力，从而操作视图、理解数据，完成人与机器之间的信息交流。
 
 ### 选择
-|功能|操作(windows)|操作(Mac)|
+|功能|操作（Windows）|操作（Mac）|
 | :--------- | :----- | :---------- |
 |单点选择|单击点|单击点|
 |多点选择|Shift + 单击点|Shift  ⇧ + 单击点|
@@ -14,7 +14,6 @@
 |边邻居选择|单击边|单击边|
 
 ### 导航
-
 |功能|操作|
 | :--------- | :----- |
 |缩放|鼠标滚轮滚动|
@@ -26,34 +25,33 @@
 
 |功能|操作|
 | :--------- | :----- |
-|布局|参考 【布局】 章节|
+|布局|参考 [布局]() |
+
 ### 编码
 编码即是通过交互来改变可视化中的视觉编码。
 
 |功能|操作|
 | :--------- | :----- |
-|外观：颜色，大小，形状|参考 外观 章节|
+|外观：颜色，大小，形状|参考 [外观]() |
 |单点染色|选择点 - 右键菜单 - 颜色标记|
 |单边染色|选择边 - 右键菜单 - 颜色标记|
+
 ### 抽象
-
-
 |功能|操作|
 | :--------- | :----- |
 |查看点属性|选择点 - 右键菜单 - 属性信息|
 |查看边属性|选择边 - 右键菜单 - 属性信息|
+
 ### 过滤
-
-
 |功能|操作|
 | :--------- | :----- |
-|查询|参考 查询 章节|
+|查询|参考 [查询]() |
+
 ### 关联
-
-
-|功能|操作(windows)|
+|功能|操作（Windows）|
 | :--------- | :----- |
 |点邻居选择|Alt + 单击点|
 |边邻居选择|单击边|
 |查找两点之间所有路径|工具栏按钮|
 |查找两点之间最短路径|工具栏按钮|
+
