--- a/product/管理与支持/账号相关/常见问题/实名认证相关/变更认证方面.md
+++ b/product/管理与支持/账号相关/常见问题/实名认证相关/变更认证方面.md
@@ -46,8 +46,8 @@
 ![](https://main.qcloudimg.com/raw/9c51d67ec2ab4bde65aa28f22cfdd5dc.png)
 3. 在选择变更类型页面，选择**更新企业法人信息**，单击**下一步**。
 ![](https://main.qcloudimg.com/raw/1f72332e439a715cf55dec457175523c.png)
-4. 填写变更后的法人实名信息，即企业名称、社会信用代码和通讯地址，单击**下一步**。
-![](https://main.qcloudimg.com/raw/dede9f7a9d3812ec445f1f6543f50fa0.png)
+4. 填写变更后的法人实名信息，即企业法人姓名与企业法人身份证号，单击**下一步**。
+![](https://main.qcloudimg.com/raw/d0342140fd783c3b6ca474bae7ac0025.png)
 5. 根据页面提示，完成认证即可。
 
 
