--- a/product/计算与网络/私有网络2018-09-13/操作指南（新）/私有网络与子网/管理私有网络/删除私有网络.md
+++ b/product/计算与网络/私有网络2018-09-13/操作指南（新）/私有网络与子网/管理私有网络/删除私有网络.md
@@ -1,4 +1,6 @@
-当 VPC 不再使用，且 VPC 中的 IP 没有被占用、VPC 内没有云资源（如云服务器、云数据库、网关等）时，可删除 VPC。
+当 VPC 不再使用，且 VPC 中除空子网、路由表、网络 ACL 之外，没有其他资源（对等连接、基础网络互通、NAT 网关、VPN 网关、专线网关、云联网、私有连接）时，可删除 VPC。
+>?空子网是指子网内无 IP 占用，即当私有网络内只有空子网、路由表和网络 ACL 时，可以删除私有网络；当子网内有 IP 占用时，无法删除私有网络。
+>
 
 ## 操作步骤
 1. 登录 [私有网络控制台](https://console.cloud.tencent.com/vpc)。
