--- a/product/计算与网络/私有网络2018-09-13/操作指南（新）/私有网络与子网/子网/删除子网.md
+++ b/product/计算与网络/私有网络2018-09-13/操作指南（新）/私有网络与子网/子网/删除子网.md
@@ -1,8 +1,6 @@
-对于子网不再使用，且子网中没有任何资源时，可进行删除操作。
-
-## 前提条件
-+ 子网内的IP没有被占用
-+ 子网内没有资源（例如云服务器、云数据库等）
+对于子网不再使用，且子网中没有占用 IP 资源时，可进行删除操作。
+>?目前子网中涉及 IP 占用的云资源包括：云服务器、内网负载均衡、弹性网卡、HAVIP、云函数、容器服务、云数据库、数据仓库、中间件、存储服务、安全、云监控及大数据。
+>
 
 ## 操作步骤
 1. 登录 [私有网络控制台](https://console.cloud.tencent.com/vpc)。
