--- a/product/企业协同/腾讯会议/操作指南/协作与互动/文档协作/文档权限控制.md
+++ b/product/企业协同/腾讯会议/操作指南/协作与互动/文档协作/文档权限控制.md
@@ -36,7 +36,7 @@
 ## 文档上传权限设置
 ### 预定会议
 1. 在客户端预定会议时，在文档中可根据需要选择是否勾选**允许成员上传文档**。
-2. 您也可以单击【点击添加】，在文档界面左上方选择文档上传权限“全员可上传”、“仅主持人可上传”。
+2. 您也可以单击**点击添加**，在文档界面左上方选择文档上传权限“全员可上传”、“仅主持人可上传”。
 
 ### 快速会议
 1. 在会中，单击**更多 > 文档**，打开文档窗口。
