--- a/product/移动与通信/移动解析/开发者手册/获取配置信息.md
+++ b/product/移动与通信/移动解析/开发者手册/获取配置信息.md
@@ -1,5 +1,5 @@
 ## 概述
-在接入移动解析 HTTPDNS 过程中，您需在移动解析 HTTPDNS 控制台获取对应配置信息后可才可正常接入，本文将对如何获取配置信息以及配置信息含义进行说明。
+在接入移动解析 HTTPDNS 过程中，您需在移动解析 HTTPDNS 控制台获取对应配置信息后才可正常接入，本文将对如何获取配置信息以及配置信息含义进行说明。
 
 ## 前提条件
 已开通移动解析 HTTPDNS。具体操作请参见 [开通移动解析 HTTPDNS](https://cloud.tencent.com/document/product/379/54577)。
@@ -14,7 +14,7 @@
 - **HTTPS 加密 Token**：调⽤移动解析 HTTPDNS 的 HTTPS 解析接口 `http://119.29.29.99` ，对 DNS 请求数据进⾏鉴权的 Token 信息。
 >?若控制台无以下两项信息，请申请应用后再进行查看。具体操作请参见 [SDK 开通流程](https://cloud.tencent.com/document/product/379/12544)。
 >
--  **IOS APPID**：使用移动解析 HTTPDNS 服务提供的 [IOS 端 SDK](https://cloud.tencent.com/document/product/379/17669) 时的 `appId（应用 ID）` 鉴权信息。
-- **安卓 APPID**：使用移动解析 HTTPDNS 服务提供的 [Android 端 SDK](https://cloud.tencent.com/document/product/379/17655) 时的 `业务 appkey` 鉴权信息。
+-  **IOS APPID**：使用移动解析 HTTPDNS 服务提供的 [IOS 端 SDK](https://cloud.tencent.com/document/product/379/17669) 的 `appId（应用 ID）` 鉴权信息。
+- **安卓 APPID**：使用移动解析 HTTPDNS 服务提供的 [Android 端 SDK](https://cloud.tencent.com/document/product/379/17655) 的 `业务 appkey` 鉴权信息。
 
 
