--- a/product/计算与网络/私有网络2018-09-13/操作指南（新）/安全管理/参数模板/概述.md
+++ b/product/计算与网络/私有网络2018-09-13/操作指南（新）/安全管理/参数模板/概述.md
@@ -5,7 +5,7 @@
 + 统一管理具有相同诉求的 IP / 协议端口组。
 + 统一管理具有频繁编辑诉求的 IP / 协议端口组。
 
-## 参数模板的类型
+## 参数模板类型
 腾讯云支持如下四种类型的参数模板：
 - IP 地址：也称为 IP 地址对象，是一组IP地址的集合，支持单个 IP、CIDR、IP 范围。
 - IP 地址组：也称为 IP 地址组对象，是多个 IP 地址对象的集合。
