--- a/product/计算与网络/共享流量包/操作指南/创建共享流量包.md
+++ b/product/计算与网络/共享流量包/操作指南/创建共享流量包.md
@@ -23,8 +23,8 @@
 <tr><td><strong>有效期</strong></td><td>选择共享流量包的有效期：<ul>
 <li>1个月</li><li>6个月</li></ul>共享流量包到期后不支持退款，到期后未用完的流量将清零。</td></tr>
 <tr><td><strong>规格</strong></td><td>选择共享流量包的规则，不同有效期对应不同的规格：<ul>
-<li>1个月有效期对应的规格为：10GB、50GB、512GB、1TB、5TB、50TB</li><li>6个月有效期对应的规格为：60GB、300GB、3TB、6TB、30TB、60TB、300TB</li></ul></td></tr>
-<tr><td><strong>协议</strong></td><td>勾选“<strong>我已阅读并同意《腾讯云服务协议》、《共享流量包退款说明》</strong>”</td></tr>
+<li>1个月有效期对应的规格为：10GB、50GB、512GB、1TB、5TB、50TB。</li><li>6个月有效期对应的规格为：60GB、300GB、3TB、6TB、30TB、60TB、300TB。</li></ul></td></tr>
+<tr><td><strong>协议</strong></td><td>勾选“<strong>我已阅读并同意《腾讯云服务协议》、《共享流量包退款说明》</strong>”。</td></tr>
 <tr><td><strong>数量</strong></td><td>选择共享流量包的数量。每个地域最多支持购买20个共享流量包（不区分全时流量包或闲时流量包）。
 </td></tr>
 </tbody></table>
