--- a/product/安全服务/图片内容安全/产品简介/产品优势.md
+++ b/product/安全服务/图片内容安全/产品简介/产品优势.md
@@ -10,7 +10,7 @@
 - 根据现有客户反馈，接入天御内容安全服务相比传统过滤方式**最高可节约90%的综合成本**，只需低廉的投入即可帮助您有效规避内容安全风险，**更低投入、更好效果**。
 
 ### 高可用性
-- **全天候可用**：承诺业务可用性不低于99.9%，专业团队7x24小时全面维护，随时提供技术支持。
+- **全天候可用**：承诺业务可用性不低于99.9%，专业团队7 × 24小时全面维护，随时提供技术支持。
 - **疾速响应**：请求毫秒级响应，结果秒级返回，超低延迟助您“快人一步”。
 - **动态高并发**：多集群部署，每秒超过万级并发，更支持动态扩容，无需担心性能损耗。
 
