--- a/product/企业协同/腾讯会议/操作指南/协作与互动/文档协作/会议纪要查看.md
+++ b/product/企业协同/腾讯会议/操作指南/协作与互动/文档协作/会议纪要查看.md
@@ -14,7 +14,7 @@
 
 ## 查看会议纪要（会议创建者）
 - 您可以登录客户端或者 [腾讯会议官网](https://meeting.tencent.com)，在”会议录制“详情页面中查看录制文件。
-- 会议录制详情页面显示会议主题、会议号、会议录制开始时间、录制时长、查看次数、下载次数、录制文件分析，单击【录制文件分析】即可进入录制文件分析详情页。
+- 会议录制详情页面显示会议主题、会议号、会议录制开始时间、录制时长、查看次数、下载次数、录制文件分析，单击**录制文件分析**即可进入录制文件分析详情页。
 - 显示录制内容关键词：最多显示8个关键词，单击可快速搜索文本相关内容。
 - 支持对关键字模糊搜索：显示出检索的关键字个数，单击上下箭头可以快速定位到关键字，关键字蓝色高亮显示，定位到的关键字橙色高亮显示，同时录制内容跟随关键字位置显示。单击输入框的**删除**可以清空输入内容。
 - 支持中英文双语切换文本纪要：单击可切换语言转译。
