--- a/product/企业协同/腾讯会议/操作指南/会议控制与管理/会议安全控制.md
+++ b/product/企业协同/腾讯会议/操作指南/会议控制与管理/会议安全控制.md
@@ -12,7 +12,7 @@
 - 屏幕水印：如果您希望保护您即将进行共享的内容，则可以在预定会议时，将屏幕水印功能打开，防止在未经允许的情况下被截取共享内容。
 - 等候室：预定会议时，在会议设置中勾选**开启等候室**，则可以帮助您过滤外来成员。
 - 特邀会议（仅商业版和企业版支持）：预定会议时，可选择预定特邀会议，则仅您邀请的微信好友或群成员可加入会议。
-- 入会成员限制（仅商业版和企业版支持）：预定会议时，可勾选【仅企业内部用户可入会】，则除企业内部用户不可入会。
+- 入会成员限制（仅商业版和企业版支持）：预定会议时，可勾选**仅企业内部用户可入会**，则除企业内部用户不可入会。
 
 ### 会议中
 - 锁定会议：如果您不希望会议过程中混入无关人员，则可以在参会者到齐之后，在**管理成员 > 更多**中勾选**锁定会议**，即可避免其他人加入正在进行的会议。
