--- a/product/数据库/图数据库EasyGraph/图数据管理/图数据管理概述.md
+++ b/product/数据库/图数据库EasyGraph/图数据管理/图数据管理概述.md
@@ -1,7 +1,7 @@
 本文为您概述介绍如何登录 KonisGraph 实例的图数据管理平台，并进行图库管理、可视化图分析等功能。
 
 ## 准备工作
-- 准备图数据库 KonisGraph 实例。
+- 准备 [图数据库 KonisGraph 实例](https://cloud.tencent.com/document/product/1366/61172)。
 - 准备好数据库帐号和密码。
 
 ## [登录图数据库](id:dltsjk)
@@ -10,10 +10,8 @@
 2. 在 [DMC 登录页面](https://dms.cloud.tencent.com/#/login)，选择对应的类型 **KonisGraph**、地域、实例，输入帐号密码，单击**登录**。
 ![](https://main.qcloudimg.com/raw/9467b37f120ee5abebb9c1f8be9778c2.png)
 3. 登录进入**图数据管理平台**，图数据管理平台分为图库管理、图分析两个页面；其中图库管理主要是图库的元数据管理，如点/边/属性的新建编辑等；图分析提供可视化的图数据查询、分析等交互页面。
- - 图库管理：
 ![](https://main.qcloudimg.com/raw/42eb0744a01d81fd58c5f8d5f2d06408.png)
- - 图分析：
-![](https://main.qcloudimg.com/raw/22fe497db69658078a62613f49baebc5.png)
+
 
 ## 图库管理概述
 登录 [图数据管理平台](#dltsjk)，单击顶部导航中的**图库管理**，进入图库管理页面，用户可新建、编辑、删除图库的元数据，如点/边/属性等。
@@ -22,7 +20,7 @@
  - 图库管理 - 点列表
 ![](https://main.qcloudimg.com/raw/6491f7b1b18c788e411471d47756be03.png)
  - 图库管理 - 边列表
-![](https://main.qcloudimg.com/raw/2106d07a74f51bf2cd2db610f8ad2ac1.png)
+![](https://main.qcloudimg.com/raw/e738c2dfa96663e093d377829fb3d8bf.png)
 
 ## 图分析概述
 登录 [图数据管理平台](#dltsjk)，单击顶部导航中的**图分析**，进入可视化图分析页面，用户可新建使用图数据查询、图数据分析、内置案例。
@@ -32,17 +30,9 @@
 图数据分析不连接图数据库 KonisGraph 实例，可导入离线或之前导出的图数据分析文件，对导入的图数据文件包含的点边数据，进行可视化渲染分析。
 
 内置案例，提供数种常见的图数据分析场景（包含点边数据），了解和试用图可视化渲染分析能力，便于初步接触和学习。
- - 图分析 - 图数据查询
-	- 新建图数据查询
-![](https://main.qcloudimg.com/raw/8640c46916bb2da8708a851a268b5547.png)
-	- 图数据查询页面
+- 图分析 - 图数据查询
 ![](https://main.qcloudimg.com/raw/22fe497db69658078a62613f49baebc5.png)
- - 图分析 - 图数据分析
-	- 新建图数据分析
-<img src="https://main.qcloudimg.com/raw/592d10901a30110d1f6b1a11219aa2ee.png"  style="zoom:80%;">
- - 图分析-内置案例
-	- 新建内置案例
-![](https://main.qcloudimg.com/raw/645f3db2b52b69b4bf9a83fa2f22ca05.png)
-	- 内置案例页面
+- 图分析 - 图数据分析
+- 图分析-内置案例
 ![](https://main.qcloudimg.com/raw/5492de46e35e8314894cfd6293952c61.png)
 
