--- a/product/计算与网络/共享流量包/产品动态.md
+++ b/product/计算与网络/共享流量包/产品动态.md
@@ -13,7 +13,7 @@
 <td>共享流量包支持闲时流量包</td> 
 <td>闲时流量包可在该地域时间的0:00-8:00使用，错峰使用流量价格更低更优惠。</td> 
 <td>2021-09-01</td> 
-<td><a href="https://cloud.tencent.com/document/product/1171/40185#product-type">闲时流量包</a></td> 
+<td><a href="https://cloud.tencent.com/document/product/1171/40187#free-time">闲时流量包</a></td> 
 </tbody>
 </table>
 
