--- a/product/企业协同/腾讯会议/产品动态.md
+++ b/product/企业协同/腾讯会议/产品动态.md
@@ -174,7 +174,7 @@
  <tr>
 <td><center> V1.7.5 </center></td>
 <td>
-**新增表情弹幕**<br> 1. 表情弹幕新增4个类型，提高表情丰富度，会议场景更活跃。<br> 
+【新增表情弹幕】<br> 1. 表情弹幕新增4个类型，提高表情丰富度，会议场景更活跃。<br> 
 2. 主持人可以给等候室的参会成员发送公告。<br> 
 3. 支持用户沉淀自己的历史会议记录。<br> 
 4. 支持会中隐藏非视频参会者，聚焦视频参会者。<br> 
@@ -360,7 +360,7 @@
 <tr>
 	<td><center> V1.7.5 </center></td>
 	<td>
-**新增表情弹幕**<br> 
+【新增表情弹幕】<br> 
 1. 表情弹幕新增4个类型，提高表情丰富度，会议场景更活跃。<br> 
 2. 主持人可以给等候室的参会成员发送公告。<br> 
 3. 支持用户沉淀自己的历史会议记录。<br> 
@@ -521,7 +521,7 @@
 <tr>
 	<td><center> V1.7.5 </center></td>
 	<td>
-**新增表情弹幕**<br> 1. 表情弹幕新增4个类型，提高表情丰富度，会议场景更活跃。<br> 
+【新增表情弹幕】<br> 1. 表情弹幕新增4个类型，提高表情丰富度，会议场景更活跃。<br> 
 2. 主持人可以给等候室的参会成员发送公告。<br> 
 3. 支持用户沉淀自己的历史会议记录。<br> 
 4. 会议前及时给参会成员推送会议提醒。<br> 
@@ -682,7 +682,7 @@
 	<tr>
 	<td><center> V1.7.5 </center></td>
 	<td>
-**新增表情弹幕**<br> 1. 表情弹幕新增4个类型，提高表情丰富度，会议场景更活跃。<br> 
+【新增表情弹幕】<br> 1. 表情弹幕新增4个类型，提高表情丰富度，会议场景更活跃。<br> 
 2. 主持人可以给等候室的参会成员发送公告。<br> 
 3. 支持用户沉淀自己的历史会议记录。<br> 
 4. 会议前及时给参会成员推送会议提醒。<br> 
