--- a/product/数据库/图数据库EasyGraph/图数据管理/图分析/图数据查询.md
+++ b/product/数据库/图数据库EasyGraph/图数据管理/图分析/图数据查询.md
@@ -1,6 +1,5 @@
 本文为您介绍在 KonisGraph 实例图数据管理平台的图分析中，如何新建图数据查询。
 
-## 图数据查询概述
 **图数据查询**连接图数据库 KonisGraph 实例，提供 Gremlin 在线数据查询，得到点边数据的查询结果，然后供可视化渲染分析；图分析完毕后，可导出图数据分析文件以供后续导入**图数据分析**继续使用，或导出图片。
 
 ## 新建图数据查询
@@ -16,7 +15,7 @@ Gremlin 语法可参考 [Gremlin兼容性](      fsadfsad  )。
 
 
 ## 图分析操作
-1. 图的可视化渲染分析的绘图区和显示设置操作，参考 [图可视化分析交互]()。
+1. 图的可视化渲染分析的绘图区和显示设置操作，参考 [图可视化分析交互](https://cloud.tencent.com/document/product/1366/61218)。
 2. 在完成本次图分析时，可导出图数据分析文件以供后续导入**图数据分析**继续使用，或导出图片。
 >!图分析网页被重新加载或关闭，图分析页面和数据查询结果不会被保存。用户需保存留用的图分析页面（数据和渲染显示布局等），请导出图数据分析文件以供后续再次导入**图数据分析**即可继续使用。
 >
