--- a/product/存储与CDN/对象存储 4.0/控制台管理V5/数据处理/设置图片审核.md
+++ b/product/存储与CDN/对象存储 4.0/控制台管理V5/数据处理/设置图片审核.md
@@ -12,7 +12,7 @@
 ## 操作步骤
 
 1. 登录 [对象存储控制台](https://console.cloud.tencent.com/cos)，在【存储桶列表】页面选择需操作的存储桶，进入存储桶管理页面。
-2. 在左侧导航栏中，选择【内容审核】>【增量审核】，单击【图片审核】。
+2. 在左侧导航栏中，选择【内容审核】>【增量数据审核】，单击【图片审核】。
 3. 单击【添加图片审核配置】，进入图片审核配置页面，并按照如下配置项说明进行配置：
 ![](https://main.qcloudimg.com/raw/c9d9d0e7581a8338cca7f866e90e9411.png)
  - **审核范围**：可选择审核的范围为整个存储桶或指定范围。
