--- a/product/存储与CDN/对象存储 4.0/控制台管理V5/数据处理/设置视频审核.md
+++ b/product/存储与CDN/对象存储 4.0/控制台管理V5/数据处理/设置视频审核.md
@@ -14,7 +14,7 @@
 ## 操作步骤
 
 1. 登录 [对象存储控制台](https://console.cloud.tencent.com/cos)，在【存储桶列表】页面选择需操作的存储桶，进入存储桶管理页面。
-2. 在左侧导航栏中，选择【内容审核】，单击【增量审核】>【视频审核】。
+2. 在左侧导航栏中，选择【内容审核】，单击【增量数据审核】>【视频审核】。
 3. 单击【添加视频审核配置】，进入视频审核配置页面，按照如下配置项说明进行配置：
    ![](https://main.qcloudimg.com/raw/346894c8960c30d4de2d43a2418c5b97.png)
    - **审核范围**：可选择审核的范围为整个存储桶或指定范围。
