--- a/product/存储与CDN/对象存储 4.0/控制台管理V5/数据处理/设置音频审核.md
+++ b/product/存储与CDN/对象存储 4.0/控制台管理V5/数据处理/设置音频审核.md
@@ -18,7 +18,7 @@
 ## 操作步骤
 
 1. 登录 [对象存储控制台](https://console.cloud.tencent.com/cos5/bucket)，在【存储桶列表】页面选择需操作的存储桶，进入存储桶管理页面。
-2. 在左侧导航栏中，选择【内容审核】>【增量审核】，单击【音频审核】。
+2. 在左侧导航栏中，选择【内容审核】>【增量数据审核】，单击【音频审核】。
 3. 单击【添加音频审核配置】，按照如下配置项说明进行配置。
    - **审核范围**：选择您希望审核的音频文件范围，指定范围支持按照整个存储桶、某个目录或文件前缀进行筛选。
    - **审核后缀**：音频格式支持 mp3、wav、aac、flac、amr、3gp、m4a、wma、ogg、ape，支持多选。
