--- a/product/存储与CDN/对象存储 4.0/SDK文档/C SDK/设置访问域名.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/C SDK/设置访问域名.md
@@ -18,8 +18,8 @@ cos_request_options_t *options = NULL;
 cos_pool_create(&p, NULL);
 options = cos_request_options_create(p);
 options->config = cos_config_create(options->pool);
-//请求域名为 xx.file.myqcloud.com
-cos_str_set(&options->config->endpoint, "xx.file.myqcloud.com");
+//请求域名为 <bucketname-appid>.file.myqcloud.com
+cos_str_set(&options->config->endpoint, "<bucketname-appid>.file.myqcloud.com");
 ```
 
 #### 参数说明
