--- a/product/存储与CDN/对象存储 4.0/控制台管理V5/数据处理/设置文本审核.md
+++ b/product/存储与CDN/对象存储 4.0/控制台管理V5/数据处理/设置文本审核.md
@@ -18,7 +18,7 @@
 1. 登录 [对象存储控制台](https://console.cloud.tencent.com/cos5)。
 2. 在左侧导航栏中，选择【存储桶列表】，进入存储桶管理页面。
 3. 找到需要操作的存储桶，单击该存储桶名称，进入存储桶配置页面。
-4. 在左侧导航栏中，选择【内容审核】>【增量审核】，单击【文本审核】。
+4. 在左侧导航栏中，选择【内容审核】>【增量数据审核】，单击【文本审核】。
 5. 单击【添加文本审核配置】，进入文本审核配置页面，并按照如下配置项说明进行配置：
 ![](https://main.qcloudimg.com/raw/69b966f1ddb15e00283916b854d96d68.png)
    - **审核范围**：可选择审核的范围为整个存储桶或指定范围。
