--- a/product/存储与CDN/对象存储 4.0/控制台管理V5/数据审核/存量审核/设置存量审核任务.md
+++ b/product/存储与CDN/对象存储 4.0/控制台管理V5/数据审核/存量审核/设置存量审核任务.md
@@ -9,7 +9,7 @@
 1. 登录 [对象存储控制台](https://console.cloud.tencent.com/cos5)。
 2. 在左侧导航栏中，选择【存储桶列表】，进入存储桶管理页面。
 3. 找到需要操作的存储桶，单击该存储桶名称，进入存储桶配置页面。
-4. 在左侧导航栏中，选择【内容审核】>【存量审核】，进入存量审核页面。
+4. 在左侧导航栏中，选择【内容审核】>【存量数据审核】，进入存量数据审核页面。
 5. 单击【创建审核任务】。
 6. 在“扫描范围”界面，您可以通过不同的扫描方式，按需审核您的文件：
 ![img](https://main.qcloudimg.com/raw/b150bb5e1fc73ce9cd44c5ed99b5467e.png)
