--- a/product/存储与CDN/对象存储 4.0/控制台管理V5/数据处理/设置视频审核.md
+++ b/product/存储与CDN/对象存储 4.0/控制台管理V5/数据处理/设置视频审核.md
@@ -2,7 +2,7 @@
 
 本文介绍如何通过控制台使用对象存储（Cloud Object Storage，COS）的视频审核功能。视频审核的检测场景包括**鉴黄**、**鉴政**、**鉴暴恐**、**广告检测**。当您开启视频审核功能后，该存储桶中新增的视频将在**上传时**自动进行检测，并支持自动冻结（禁止公有读访问）已检测的违规内容。
 
-您也可以对 COS 中的**存量**视频进行扫描审核，详情请参见 [设置存量审核任务](https://cloud.tencent.com/document/product/436/54405) 和 [视频审核](https://cloud.tencent.com/document/product/436/47316) API 文档。
+您也可以对 COS 中的**存量**视频进行扫描审核，详情请参见 [设置存量数据审核任务](https://cloud.tencent.com/document/product/436/54405) 和 [视频审核](https://cloud.tencent.com/document/product/436/47316) API 文档。
 
 >!
 > - 视频审核功能基于**视频截帧**技术，通过对所截图片进行审核的方式实现此功能。开启视频审核时您可选择截帧方式，详情请查看下方操作步骤。
