--- a/product/存储与CDN/对象存储 4.0/控制台管理V5/数据处理/设置图片审核.md
+++ b/product/存储与CDN/对象存储 4.0/控制台管理V5/数据处理/设置图片审核.md
@@ -2,7 +2,7 @@
 
 本文介绍如何通过控制台使用对象存储（Cloud Object Storage，COS）的图片审核功能。开启图片审核服务后，该存储桶中新增的图片会在上传时自动进行检测，并支持自动冻结（禁止公有读访问）已检测的违规内容。
 
-您也可以对 COS 中的**存量**图片文件进行扫描，审核涉黄、涉政、涉暴力恐怖及广告传播的文件，详情请参见 [设置存量审核任务](https://cloud.tencent.com/document/product/436/54405) 和 [图片审核](https://cloud.tencent.com/document/product/436/45434) API 文档。
+您也可以对 COS 中的**存量**图片文件进行扫描，审核涉黄、涉政、涉暴力恐怖及广告传播的文件，详情请参见 [设置存量数据审核任务](https://cloud.tencent.com/document/product/436/54405) 和 [图片审核](https://cloud.tencent.com/document/product/436/45434) API 文档。
 
 > !
 >- 内容审核为收费项，由数据万象收取，详细的计费说明请参见 [图片处理费用](https://cloud.tencent.com/document/product/436/58963)。此外数据万象还提供每日有2000次的免费鉴图额度，未用完的额度不累计至下一天，计费系统会扣除免费的2000次（免费额度优先抵扣 [确定部分](#1) 的次数）。
