--- a/product/存储与CDN/对象存储 4.0/控制台管理V5/数据处理/设置文本审核.md
+++ b/product/存储与CDN/对象存储 4.0/控制台管理V5/数据处理/设置文本审核.md
@@ -4,7 +4,7 @@
 
 开启文本审核功能后，该存储桶中新增的文本文件将在**上传时**自动进行检测，并支持自动冻结（禁止公有读访问）已检测的违规内容。
 
-您也可以对 COS 中的**存量**文本进行扫描审核，详情请参见 [设置存量审核任务](https://cloud.tencent.com/document/product/436/54405)。
+您也可以对 COS 中的**存量**文本进行扫描审核，详情请参见 [设置存量数据审核任务](https://cloud.tencent.com/document/product/436/54405)。
 
 >?
 > - 文本审核是付费服务，由数据万象收取，详细的计费说明请参见 [内容审核费用](https://cloud.tencent.com/document/product/436/58965)。
