--- a/product/计算与网络/专线接入/操作指南18-08-27/管理专线网关/专线网关概述.md
+++ b/product/计算与网络/专线接入/操作指南18-08-27/管理专线网关/专线网关概述.md
@@ -79,7 +79,7 @@
 ![](https://main.qcloudimg.com/raw/e1223de6586b26115d721c55245544f5.png)
 腾讯云专线继承了腾讯云 DSR 高可用特性，大大提高了专线网关可用性。
 - 在路由转发平面，DSR 通过多活技术为每个专用通道提供2个双活的路由系统，每个路由系统独立分布在不同的 DSR 集群上，同时 DSR 集群对外提供了2个腾讯云边界 IP 地址来实现控制面路由双活机制（active-active system），这样 IDC 侧本地路由器通过 BGP 协议分别与两个 DSR 集群分别建立了 BGP 邻居关系，有效的保证了 DSR 集群升级或者单集群故障时业务的高可用，避免因单 BGP 邻居中断导致路由收敛而对业务产生的影响 。
-- 在数据转发面，DSR 系统通过大规模集群控制和自研集群扩展技术，实现海量数据和流量的分布书转发。在集群内通过实时监测机制动态调整并剔除异常服务节点，保证了单集群的可用性；集群间通过大规模集群扩展技术，实现用户业务在多个集群间横向扩容，确保了跨集群的可用性。
+- 在数据转发面，DSR 系统通过大规模集群控制和自研集群扩展技术，实现海量数据和流量的分布式转发。在集群内通过实时监测机制动态调整并剔除异常服务节点，保证了单集群的可用性；集群间通过大规模集群扩展技术，实现用户业务在多个集群间横向扩容，确保了跨集群的可用性。
 
 ### 推荐配置
 1. 腾讯云侧：DSR 通过 BGP 协议学习腾讯云到用户 IDC 的路由，下一跳为用户本地路由器。
