--- a/product/域名与网站/云解析/故障处理/域名解析不生效怎么办？.md
+++ b/product/域名与网站/云解析/故障处理/域名解析不生效怎么办？.md
@@ -6,7 +6,7 @@
 ## 可能原因
 请在 [DNS.TECH 域名检测](https://dns.tech/) 中输入您需要检测的域名，并根据检查结果进行排查。
 例如，域名检测输入 `dnspod.cn`。如下图所示：
-![](https://main.qcloudimg.com/raw/45384125cf1fc26587b38ae5af1511b6.png)
+![](https://main.qcloudimg.com/raw/9d49a1eb641ac533bbb676fab40a6e1f.png)
 **可能导致域名未生效的原因：**
  - 域名状态为 Clienthold 或 Serverhold。
  - 域名已过期。
@@ -16,13 +16,13 @@
 
 ## 解决办法
 ### 域名状态为 Clienthold 或 Serverhold
-通过检测工具查询，若【域名状态】处显示为 Clienthold 或 Serverhold，则会导致解析无法生效。主要是由于域名**未实名认证**或**命名审核不通过**。
+通过检测工具查询，若**域名状态**显示为 Clienthold 或 Serverhold，则会导致解析无法生效。主要是由于域名**未实名认证**或**命名审核不通过**。
 - 若您的域名在腾讯云注册，请先进行 [域名实名认证](https://cloud.tencent.com/document/product/242/6707)。
 - 若您的域名非腾讯云注册，请咨询您的域名注册商。
 ![](https://main.qcloudimg.com/raw/41ad83dd1f46547b31a32b48e27a8675.png)
 
 ### 域名已过期
-域名过期会导致域名解析失效，若【域名到期日】处检查已过期，需前往域名注册商处确认域名到期时间。如已经到期，请尽快续费，续费成功后解析将在0 - 72小时内恢复正常。
+域名过期会导致域名解析失效，若**域名到期日**显示检查已过期，需前往域名注册商处确认域名到期时间。如已经到期，请尽快续费，续费成功后解析将在0 - 72小时内恢复正常。
 - 若您的域名在腾讯云注册，续费操作详情请参考 [域名续费](https://cloud.tencent.com/document/product/242/9644)。
 - 若您的域名非腾讯云注册，请咨询您的域名注册商。
 ![](https://main.qcloudimg.com/raw/e5ee76a22f40c83fc9c05f809dd5bbca.png)
