--- a/product/存储与CDN/对象存储 4.0/控制台管理V5/数据审核/存量审核/设置存量审核任务.md
+++ b/product/存储与CDN/对象存储 4.0/控制台管理V5/数据审核/存量审核/设置存量审核任务.md
@@ -1,6 +1,6 @@
 ## 简介
 
-本文介绍如何通过控制台使用对象存储（Cloud Object Storage，COS）内容审核的存量审核功能。您可以通过创建存量审核任务，对您的图片、视频、音频和文本文件进行一次性的批量审核。
+本文介绍如何通过控制台使用对象存储（Cloud Object Storage，COS）内容审核的存量数据审核功能。您可以通过创建存量数据审核任务，对您的图片、视频、音频和文本文件进行一次性的批量审核。
 
 ## 操作步骤
 
@@ -63,7 +63,7 @@
 
 ### 查看任务结果
 
-在存量审核页面，您可以根据任务状态进行不同的操作。
+在存量数据审核页面，您可以根据任务状态进行不同的操作。
 ![img](https://main.qcloudimg.com/raw/8538d60b32abff89d5a3b99d33f62662.png)
  - 当任务状态为**执行中**，您可以查看**任务配置**或**终止任务**。
  - 当任务状态为**执行成功**，您可以查看**审核详情**或查看**结果统计**。
