--- a/product/数据库/图数据库EasyGraph/图数据管理/图分析/图可视化分析交互/外观.md
+++ b/product/数据库/图数据库EasyGraph/图数据管理/图分析/图可视化分析交互/外观.md
@@ -1,7 +1,4 @@
-本文为您介绍在 KonisGraph 实例图数据管理平台的图分析中，如何进行图可视化分析的基本交互。
-
-## 基本交互概述
-图可视分析系统的核心要素包括用户交互。利用交互，用户可以获得与系统互动的能力，从而操作视图、理解数据，完成人与机器之间的信息交流。
+本文为您介绍在 KonisGraph 实例图数据管理平台的图分析中，如何进行图可视化分析的外观调整。
 
 ## 点颜色
 ### 统一
@@ -37,6 +34,7 @@
 - 一键配色：根据属性值一键生成配色（属性值过多时不建议使用此功能）。
 - 清除配色：一键清除当前所有配色。
 - 添加配色：添加一种配色。
+
 ![](https://main.qcloudimg.com/raw/61f6e45e4209b48c7587fa867384558f.png)
 
 ## 点大小
@@ -58,6 +56,7 @@
 - 一键图标：根据属性值一键生成图标（属性值过多时不建议使用此功能）。
 - 清除图标：一键清除当前所有图标配置。
 - 添加图标：添加一种图标配置。
+
 ![](https://main.qcloudimg.com/raw/d3265552265e386122eaafa2caea7f8a.png)
 
 ## 边颜色
