--- a/product/存储与CDN/对象存储 4.0/SDK文档/C SDK/设置访问域名.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/C SDK/设置访问域名.md
@@ -1,6 +1,6 @@
 ## 简介
 
-本文档提供关于如何使用非默认域名请求 COS 服务。
+本文档提供关于如何使用非默认域名请求对象存储（Cloud Object Storage，COS）服务。
 
 ### 默认 CDN 加速域名
 
@@ -54,8 +54,8 @@ options->config->is_cname = 1；
 
 | 参数名称            | 描述                          | 类型           |
 | ------------------ | ---------------------------- | -------------- |
-| endpoint           | 通过设置域名后缀，使用自定义CDN域名 | String         |
-| is_cname           | 设置为1，设置为自定义CDN域名模式  | Int         |
+| endpoint           | 通过设置域名后缀，使用自定义 CDN 域名 | String         |
+| is_cname           | 设置为1，设置为自定义 CDN 域名模式  | Int         |
 
 
 
