--- a/product/安全服务/数据安全网关/快速入门/安全场景/服务器真实密码隐藏/服务器真实密码隐藏.md
+++ b/product/安全服务/数据安全网关/快速入门/安全场景/服务器真实密码隐藏/服务器真实密码隐藏.md
@@ -8,7 +8,7 @@
 2. 单击【计划管理】，进入任务计划管理页面。
 3. 单击【新建】，进入计划任务添加页面，输入如下相关配置信息：
  - **计划所属者**：选择本系统
- - **执行规则**：可以选择单次执行、按周执行：按月执行。
+ - **执行规则**：可以选择单次执行、按周执行、按月执行。
  - **口令规则**：
     - 指定策略：已添加到系统的口令策略。
     - 使用资源策略：已绑定到资源上的口令策略。
