--- a/product/计算与网络/云联网/最佳实践/测试环境与现网环境隔离部署.md
+++ b/product/计算与网络/云联网/最佳实践/测试环境与现网环境隔离部署.md
@@ -1,6 +1,6 @@
 您已开通云联网服务，企业中所有 VPC 已通过云联网实现互通。默认情况下，加入到云联网中的网络实例之间是互通的。
 
-在特定场景下，您可在企业网络中划分不同的网络区域，不同区域中的网络实例之间互相隔离。通过腾讯云联网的自定义路由表功能，可实现该场景。您可以为云联网规划不同的自定义路由表，不同区域的网络实例关联不同的自定义路由表，从而实现网络实例之间的网络隔离。
+在特定场景下，您可在企业网络中划分不同的网络区域，不同区域中的网络实例之间互相隔离。通过腾讯云云联网的自定义路由表功能，可实现该场景。您可以为云联网规划不同的自定义路由表，不同区域的网络实例关联不同的自定义路由表，从而实现网络实例之间的网络隔离。
 >? 目前自定义路由表相关功能处于内测中，如有需求请[ 在线咨询](https://cloud.tencent.com/online-service?from=sales&source=PRESALE)。
 >
 
