--- a/product/物联网/物联云IoT Hub/开发者手册/设备接入协议/设备接入地域说明.md
+++ b/product/物联网/物联云IoT Hub/开发者手册/设备接入协议/设备接入地域说明.md
@@ -10,7 +10,7 @@
 
 设备接入时，用户可根据需求选择接入如下服务器地址：
 
-## MQTT 接入域名：
+## MQTT 接入域名
 
 | 地域                 | 域名                                             |
 | -------------------- | ------------------------------------------------ |
@@ -19,7 +19,7 @@
 | 欧洲中部（法兰克福） | ${productid}.europe.iothub.tencentdevices.com    |
 | 东南亚太（曼谷）     | ${productid}.ap-bangkok.iothub.tencntdevices.com |
 
-## CoAP 接入域名：
+## CoAP 接入域名
 
 | 地域                 | 域名                                             |
 | -------------------- | ------------------------------------------------ |
@@ -28,7 +28,7 @@
 | 欧洲中部（法兰克福） | ${productid}.europe.iothub.tencentdevices.com    |
 | 东南亚太（曼谷）     | ${productid}.ap-bangkok.iothub.tencntdevices.com |
 
-## HTTP 接入域名：
+## HTTP 接入域名
 
 | 地域                 | 域名                                    |
 | -------------------- | --------------------------------------- |
