--- a/product/监控与管理/应用性能观测/服务协议/服务等级协议.md
+++ b/product/监控与管理/应用性能观测/服务协议/服务等级协议.md
@@ -25,7 +25,7 @@ APM 服务器接收失败的请求，视为失败请求。
 #### 1.5 每5分钟错误率
 
 以5分钟为单位按照如下方式计算错误率。
-每5分钟错误率 =（每5分钟失败请求数 ÷ 每5分钟有效总请求数）×100% 。
+每5分钟错误率 =（每5分钟失败请求数/每5分钟有效总请求数）×100% 。
 
 #### 1.6 月度服务费用
 
@@ -37,7 +37,7 @@ APM 服务器接收失败的请求，视为失败请求。
 
 服务可用性按服务周期统计，按照如下方式计算：
 
-服务可用性 =（1 -（服务周期内∑每5分钟错误率 ÷ 服务周期内5分钟总个数））× 100%
+服务可用性 =（1 -（服务周期内∑每5分钟错误率/服务周期内5分钟总个数））× 100%
 
 （注：服务周期内5分钟总个数 = 12 × 24 × 该服务周期的天数）
 
@@ -89,7 +89,7 @@ APM 服务器接收失败的请求，视为失败请求。
 
 ## 6.  其他
 
-6.1 双方确认并在此认可：在任何情况下，若您在使用本服务过程中因腾讯云违约原因造成您损失的，腾讯云的违约赔偿总额不超过您已经支付的相应违约服务对应的服务费总额。
+6.1 **双方确认并在此认可：在任何情况下，若您在使用本服务过程中因腾讯云违约原因造成您损失的，腾讯云的违约赔偿总额不超过您已经支付的相应违约服务对应的服务费总额。**
 
 6.2 腾讯云有权根据变化适时或必要时对本协议条款做出修改，您可以在腾讯云官网的最新版本中查阅相关协议条款。如您不同意腾讯云对协议所做的修改，您有权停止使用本服务，如您继续使用本服务，则视为您接受修改后的协议。
 
