--- a/product/安全服务/身份安全/多因子验证/产品简介/产品优势.md
+++ b/product/安全服务/身份安全/多因子验证/产品简介/产品优势.md
@@ -8,7 +8,7 @@
 - 配合腾讯身份验证器 App 及小程序，提供便捷的移动令牌，实现随时随地轻松管理。
 - 支持同时对接多种账户源，如：AD、数据库、企业微信、工作邮箱等，轻松实现企业账户全覆盖。
 - SaaS 服务即开即用，轻松对接典型场景开发量低，无运营维护成本。
-- 适配常见的企业网络设备及办公应用，无需改造企业现有网络环境，快速、无感实现多因素身份认证防护。
+- 适配常见的企业网络设备及办公应用，无需改造企业现有网络环境，快速、无感实现多因子身份认证防护。
 
 ### 安全合规
 数据安全达到国家2级等级保护标准，具备如下特点：
