--- a/product/移动开发/Serverless 云应用/参考指南/告警设置.md
+++ b/product/移动开发/Serverless 云应用/参考指南/告警设置.md
@@ -31,7 +31,7 @@
 
 ### 触发条件
 具体触发告警的规则，每个告警策略中可以创建多个触发条件。
-- **指标含义：**请参见 [监控字段说明](https://docs.cloudbase.net/run/monitoring.html)。
+- **指标含义：**请参见 [监控字段说明](https://cloud.tencent.com/document/product/1243/46131#.E7.9B.91.E6.8E.A7.E5.AD.97.E6.AE.B5.E8.AF.B4.E6.98.8E)。
 - **统计周期：**间隔多久检查一次指标是否满足条件。目前仅支持 5 分钟。
 - **比较条件：**比较指标数值和阈值的关系，包括 `>`、`>=`、`<`、`<=`、`=` 以及 `!=`。
 - **阈值：**用于和指标比较的固定值。
