--- a/product/数据库/云数据库MySQL/操作指南/维护管理实例/销毁实例.md
+++ b/product/数据库/云数据库MySQL/操作指南/维护管理实例/销毁实例.md
@@ -3,7 +3,7 @@
 - 包年包月实例退还后，实例被移入云数据库回收站保留7天，期间实例无法访问。如您想恢复该实例，可在回收站进行续费恢复。
 - 按量计费实例退还后，实例被移入云数据库回收站保留24小时，期间实例无法访问。如您想恢复该实例，可在回收站进行续费恢复。
 
-自助退还后，实例的状态一旦变为“**隔离中**”时，就不再产生与该实例相关的费用。
+自助退还后，实例的状态一旦变为**隔离中**时，就不再产生与该实例相关的费用。
 >!
 >- 实例销毁后数据将无法找回，备份文件会同步销毁，无法在云上进行数据恢复，请提前做好备份文件的转存。
 >- 实例销毁后 IP 资源同时释放，如果该实例有相关的只读或灾备实例：
