--- a/product/大数据与AI/智能合同审核/常见问题.md
+++ b/product/大数据与AI/智能合同审核/常见问题.md
@@ -2,7 +2,7 @@
 智能合同审核可以支持识别格式包括：doc、docx、txt、pdf、png、jpg、jpeg。
 
 ### 智能合同审核平台包含哪些能力？
-智能合同审核包含合同起草、合同协作、合同信息提取、风险审核、合同比对等一系列产品能力，并可跟进您所在业务系统情况，调整支持系统对接能力。
+智能合同审核平台包含合同起草、合同协作、合同信息提取、风险审核、合同比对等一系列产品能力，并可跟进您所在业务系统情况，调整支持系统对接能力。
 
 ### 产品支持企业定制功能需求吗？怎么收费？
 支持企业定制功能需求；您可以 [立即申请](https://cloud.tencent.com/apply/p/ubiom6c4rj)，填写企业的具体需求，我们会根据您的需求安排相应的专家进行沟通、评估后向企业提供报价。
