--- a/product/视频服务/播放器/iOS端集成/定制开发/点播播放器.md
+++ b/product/视频服务/播放器/iOS端集成/定制开发/点播播放器.md
@@ -36,7 +36,7 @@ TXVodPlayer *_txVodPlayer = [[TXVodPlayer alloc] init];
 
 ![](https://main.qcloudimg.com/raw/3c15f622f653f87fa49b3c1ee1ebc173.png)
  
-**如何做动画？**
+**如何做动画**
  针对 view 做动画是比较自由的，不过请注意此处动画所修改的目标属性应该是 transform 属性而不是 frame 属性。
 ```objectivec
   [UIView animateWithDuration:0.5 animations:^{
@@ -45,14 +45,14 @@ TXVodPlayer *_txVodPlayer = [[TXVodPlayer alloc] init];
 ```
 
 ### step3：启动播放
-TXVodPlayer 支持两种播放模式，您可以根据需要自行选择
-1. 通过 url 方式
+TXVodPlayer 支持两种播放模式，您可以根据需要自行选择：
+- 通过 URL 方式
 TXVodPlayer 内部会自动识别播放协议，您只需要将您的播放 URL 传给 startPlay 函数即可。
 ```objectivec
 NSString* url = @"http://1252463788.vod2.myqcloud.com/xxxxx/v.f20.mp4";
 [_txVodPlayer startPlay:url ];
 ```
-2. 通过 fileId 方式
+- 通过 fileId 方式
 ```objectivec
 TXPlayerAuthParams *p = [TXPlayerAuthParams new];
 p.appId = 1252463788;
