--- a/product/大数据与AI/智能合同审核/产品简介/应用场景.md
+++ b/product/大数据与AI/智能合同审核/产品简介/应用场景.md
@@ -1,4 +1,4 @@
-### 合同录入/归档
+### 合同录入
 
 在合同录入或归档阶段，可使用智能合同审核中的合同信息提取能力，提取合同中的关键字段信息，对接合同系统，自动完成合同的录入或归档流程。抽取字段信息可采用内置的字段，亦可根据业务系统字段要求，实现定制化字段抽取效果，以满足实际场景需求。
 
