--- a/product/视频服务/播放器/iOS端集成/定制开发/点播播放器.md
+++ b/product/视频服务/播放器/iOS端集成/定制开发/点播播放器.md
@@ -221,7 +221,7 @@ NSArray *bitrates = [_txVodPlayer supportedBitrates]; //获取多码率数组
 
 ### step16：码流自适应
 SDK 支持 HLS 的多码流自适应，开启后会自动切换最佳的码率播放。在收到 PLAY_EVT_PLAY_BEGIN 事件后，可以通过下面方法开启码流自适应。
-```
+```objectivec
 [_txVodPlayer setBitrateIndex:-1]; //index 参数传入-1
 ```
 在播放过程中，可以随时通过 `-[TXVodPlayer setBitrateIndex:]` 切换其它码率，切换后码流自适应也随之关闭。
