--- a/product/安全服务/身份安全/多因子验证/购买指南/计费概述.md
+++ b/product/安全服务/身份安全/多因子验证/购买指南/计费概述.md
@@ -54,19 +54,18 @@
 </tr>
 <tr>
 <td>腾讯身份验证器</td>
-<td>iOS，Android</td>
+<td>iOS、Android</td>
 <td  rowspan=3 >-</td>
 <td  rowspan=3 >免费下载</td>
 <td>终端用户通过移动端下载平台免费下载</td>
 </tr>
 <tr>
 <td>腾讯多因子身份认证服务代理</td>
-<td>Windows，Linux</td>
+<td  rowspan=2 >Windows、Linux</td>
 <td  rowspan=2 >通过官网 <a href="https://cloud.tencent.com/online-service?from=sales&amp;source=PRESALE">联系腾讯云服务团队</a> 获取</td>
 </tr>
 <tr>
 <td>腾讯多因子身份认证服务器插件</td>
-<td>Windows，Linux</td>
 </tr>
 </tbody></table>
 
