--- a/product/存储与CDN/对象存储 4.0/SDK文档/Android SDK/快速入门.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/Android SDK/快速入门.md
@@ -308,7 +308,7 @@ cosxmlUploadTask.setTransferStateListener(new TransferStateListener() {
 viewModelScope.launch {
     val `object` = cosObject {
         bucket = cosBucket {
-            service = cos
+            service = cosXmlService
             name = "examplebucket-1250000000"
         }
         key = "exampleObject"
