--- a/product/监控与管理/云监控/使用指南/Dashboard2.0/查看云产品流量.md
+++ b/product/监控与管理/云监控/使用指南/Dashboard2.0/查看云产品流量.md
@@ -65,7 +65,7 @@
 
 ### 步骤2：创建模板变量
 
-1. 在已创建的 Dashboard 页面单击设置按钮，单击**![](https://main.qcloudimg.com/raw/8e26fe2eacdd794457a53a745bd48f3c.png)**。
+1. 在已创建的 Dashboard 页面单击设置按钮，单击![](https://main.qcloudimg.com/raw/8e26fe2eacdd794457a53a745bd48f3c.png)。
 2. 在弹框中单击**模板变量**，进入模板变量管理页。
 3. 单击**新建**，填写变量名，选择关联标签为“云数据库-MySQL-主机监控的实例”。
 4. 完成后，单击**确定**即可。
