--- a/product/企业通信/云呼叫中心/SDK 文档/最佳实践.md
+++ b/product/企业通信/云呼叫中心/SDK 文档/最佳实践.md
@@ -1,5 +1,3 @@
-## SDK 最佳实践
-
 ## 总体流程说明
 ![](https://main.qcloudimg.com/raw/f9e6653d13a469bc168d32145a7cc653.png)
 1. 开发者页面登录鉴权请求，一般是密码登录。
@@ -30,7 +28,7 @@
 后续的 SDK 中的接口调用参见[ SDK 快速入门](https://cloud.tencent.com/document/product/679/61237) 和 [SDK API ](https://cloud.tencent.com/document/product/679/61237)章节即可。
 
 ## 集成开发能力
-在 SDK 初始化后, 会在 Window 上注册一个名为 TCCC 的 instance。 用于外部系统集成呼叫中心的功能。TCCC 上提供了操作腾讯与呼叫中心的 API, 以及监听坐席端事件的监听注册功能。
+在 SDK 初始化后, 会在 Window 上注册一个名为 TCCC 的 instance。 用于外部系统集成呼叫中心的功能。TCCC 上提供了操作腾讯云呼叫中心的 API, 以及监听坐席端事件的监听注册功能。
 
 ## SDK 初始化参数
 当 SDK 的脚本被引入浏览器的运行环境时, SDK 就会初始化, 登录，并最近呈现坐席工作台。在初始化 SDK 时，可以通过对即将插入的`<script>`标签的 dataset 进行定制以注入一些初始化参数。
