--- a/product/企业通信/云呼叫中心/SDK 文档/快速集成.md
+++ b/product/企业通信/云呼叫中心/SDK 文档/快速集成.md
@@ -1,5 +1,5 @@
 ## 快速集成
->?本章节中所描述的**获取 SDK 登录 Token** 的方式仅用于调试，正式环境集成 SDK 请参见 SDK 最佳实践。
+>?本章节中所描述的**获取 SDK 登录 Token** 的方式仅用于调试，正式环境集成 SDK 请参见 [SDK 最佳实践](https://cloud.tencent.com/document/product/679/61238)。
 
 ## 前提条件
 - 已经 [开通腾讯云呼叫中心](https://cloud.tencent.com/document/product/679/48028) 并创建实例，请不要使用体验环境实例。
@@ -8,14 +8,14 @@
 - 由于浏览器的安全限制, 请确保嵌入 SDK 的网站使用了 HTTPS 协议, 否则您将不能正常使用 SDK 通话。
 - 由于腾讯云呼叫中心嵌入实例需要保证登录态, 以便和腾讯云底层协议之间互信调用。请确保浏览器允许访问第三方 Cookie。否则 SDK 将不能正常登录。腾讯云呼叫中心只使用 Cookie 保存登录态，腾讯云呼叫中心不会做任何跟踪。
 - 浏览器版本支持 Chrome 56+，Edge 80+。
-
+[](id:secretkey)
 ## 获取密钥
 获取腾讯云主账号访问密钥或者腾讯云子账号访问密钥文档请参见 [主账号访问密钥管理](https://cloud.tencent.com/document/product/598/40488)。
 >?生产环境中密钥请妥善保存，避免暴露。
-
+[](id:sync)
 ## 同步客服账号
 申请过腾讯云呼叫中心实例之后，云呼叫中心实例中至少有一位管理员账号，快速集成时可以使用这一账号，如果需要使用其他账号进行快速集成，请参阅 [客服管理](https://cloud.tencent.com/document/product/679/48056) 的操作步骤进行手动添加。
-
+[](id:getToken)
 ## 获取 SDK 登录 Token
 获取 Token 接口的相关说明，请查阅 [创建 SDK 登录 Token](https://cloud.tencent.com/document/api/679/49227)。除了文档中使用 SDK 或者接口的方式获取之外，通过 [API Explorer](https://console.cloud.tencent.com/api/explorer?Product=ccc&Version=2020-02-10&Action=CreateSDKLoginToken) 可以更快速获取 Token，并用于调试。
 
@@ -49,7 +49,7 @@ client.CreateSDKLoginToken(params)
     } 
 );
 ```
-
+[](id:initiative)
 ## 初始化 SDK
 ```
 // 调用腾讯云 API 获取 token, sdkUrl
@@ -68,6 +68,7 @@ injectTCCC({token: "xxx", userId: 'xxx', sdkAppId: 'xxx'})
 
 ```
 
+[](id:callIn)
 ## 呼入集成
 接口调用如下：
 ```
@@ -82,6 +83,7 @@ tccc.on(tccc.events.callIn, event => {
 呼入事件流程：
 ![](https://main.qcloudimg.com/raw/b84c556180365cf03af5caad261e6510.png)
 
+[](id:callOut)
 ## 外呼集成
 接口调用如下：
 ```
