--- a/product/企业通信/云呼叫中心/SDK 文档/最佳实践.md
+++ b/product/企业通信/云呼叫中心/SDK 文档/最佳实践.md
@@ -13,7 +13,7 @@
 
 ## 操作步骤
 ### 步骤1：获取密钥
-获取腾讯云主账号访问密钥或者腾讯云子账号访问密钥文档请参考 [主账号访问密钥管理](https://cloud.tencent.com/document/product/598/40488)。
+获取腾讯云主账号访问密钥或者腾讯云子账号访问密钥文档请参见 [主账号访问密钥管理](https://cloud.tencent.com/document/product/598/40488)。
 >?生产环境中密钥请妥善保存，避免暴露。
 ### 步骤2：同步客服账号
 同步客服账号有两种方式：
