--- a/product/监控与管理/云监控/使用指南/Dashboard2.0/监控图表/各图表类型应用场景/表格.md
+++ b/product/监控与管理/云监控/使用指南/Dashboard2.0/监控图表/各图表类型应用场景/表格.md
@@ -12,7 +12,7 @@
 
 1. 登录 [云监控控制台—Dashboard列表](https://console.cloud.tencent.com/monitor/dashboard2/dashboards)，进入 Dashboard 列表页面。
 2. 单击您需要配置表格图表的 Dashboard，进入该 Dashboard 管理页面。
-3. 将鼠标移动到需要配置表格的图表，选择****...**** > **编辑**，进入编辑图表页面。
+3. 将鼠标移动到需要配置表格的图表，选择 **...** > **编辑**，进入编辑图表页面。
 ![](https://main.qcloudimg.com/raw/5fcfc72e432816f128feac8a6d3531d6.jpg)
 4. 在页面右侧的图表配置部分中单击**图表类型**，在下拉选项中选择**表格**。相关配置说明如下：
  - **图表元素**
