--- a/product/监控与管理/云监控/使用指南/事件中心/产品事件.md
+++ b/product/监控与管理/云监控/使用指南/事件中心/产品事件.md
@@ -67,7 +67,7 @@
 1. 登录 [云监控控制台](https://console.cloud.tencent.com/monitor/overview)。
 2. 单击左侧导航栏中**事件中心** > **产品事件**，进入产品事件页面。
 3. 单击页面右上方全局筛选搜索框，选择**影响对象**搜索项，输入资源对象 ID 后回车键确认。
-4.（可选）通过资源对象属性搜索关联事件，先在产品类型中选择对应产品，全局筛选搜索框内即增加该产品支持的搜索的属性字段（例如容器服务增加**集群 ID****命名空间**等搜索项），输出内容后回车确认。
+4.（可选）通过资源对象属性搜索关联事件，先在产品类型中选择对应产品，全局筛选搜索框内即增加该产品支持的搜索的属性字段（例如容器服务增加**集群 ID**或**命名空间**等搜索项），输出内容后回车确认。
 5. 上下滑动事件列表页面滚动条与选择页面翻页导航查看搜索结果。
 
 ### 查看事件概览
@@ -90,7 +90,7 @@
 1. 登录 [云监控控制台](https://console.cloud.tencent.com/monitor/overview)。
 2. 单击左侧导航栏中**事件中心** > **产品事件**，进入产品事件页面。
 3. 找到需要配置的事件，在其告警配置一栏下单击**新增配置**，即快速跳转至新增告警策略页面并以填写对应事件规则与关联此资源实例，可自行调整策略设定后提交。
-4. 告警记录可于**[告警历史](https://console.cloud.tencent.com/monitor/alarm2/history)**查看。
+4. 告警记录可于 **[告警历史](https://console.cloud.tencent.com/monitor/alarm2/history)** 查看。
 
 ## 覆盖产品
 
