--- a/product/计算与网络/Serverless Framework/操作指南/多函数应用部署.md
+++ b/product/计算与网络/Serverless Framework/操作指南/多函数应用部署.md
@@ -1,14 +1,13 @@
-基于腾讯云 [multi-scf](https://github.com/serverless-components/tencent-multi-scf) 组件，您可以快速构建您的多函数应用并完成部署，大大降低了复杂应用的开发成本。
+基于腾讯云 [multi-scf](https://github.com/serverless-components/tencent-multi-scf) 组件，您可以快速构建您的多函数应用并完成部署，大幅降低了复杂应用的开发成本。
 
 ### 使用前提
-- 已安装 Serverless Framework（参考 [安装 Serverless Framework](https://cloud.tencent.com/document/product/1154/42990)）
-- 账号开通 Serverless 相关权限（参考 [账号和权限配置](https://cloud.tencent.com/document/product/1154/43006)）
+- 已安装 Serverless Framework，详情见 [安装 Serverless Framework](https://cloud.tencent.com/document/product/1154/42990)。
+- 账号开通 Serverless 相关权限，详情见 [账号和权限配置](https://cloud.tencent.com/document/product/1154/43006)。
 
 ### 开发部署步骤
-> 示例项目：https://github.com/serverless-components/tencent-multi-scf/tree/master/examples
+示例项目详情见 [案例列表](https://github.com/serverless-components/tencent-multi-scf/tree/master/examples)。
 
-1. 本地开发您的应用项目，此处以含有两个函数的项目为例，应用目录结构如下：
-
+1. 本地开发您的应用项目，本文以含有两个函数的项目为例，应用目录结构如下：
 ```
    ./multi-scf-demo
    ├── index
@@ -22,9 +21,7 @@
    └── serverless.yml # yml 配置文件
 ```
 
-2. 在**根目录**下，创建 `serverless.yml` 文件，为您的项目进行相关的参数配置，示例 yml 参考，更多配置内容，参考[全量配置](https://github.com/serverless-components/tencent-multi-scf/blob/master/docs/configure.md)：
-
-
+2. 在**根目录**下，创建 `serverless.yml` 文件，参考如下 yml 示例，为您的项目进行相关的参数配置。更多配置内容，请参见 [全量配置](https://github.com/serverless-components/tencent-multi-scf/blob/master/docs/configure.md)。
 ```yml
 app: multi-scf #应用名称
 component: multi-scf #组件类型，为 nulti-scf
@@ -66,11 +63,11 @@ inputs:
             function: user
 ```
 
-3. 完成配置后，在根目录下执行 `sls deploy`，测试项目是否可以部署成功
+3. 完成配置后，在根目录下执行 `sls deploy`，测试项目是否部署成功。
 
 
 ### 应用控制台上架
-以**工单**方式进行提交，注意您的项目需要包含以下内容：
+通过 **[工单](https://console.cloud.tencent.com/workorder/category?level1_id=876&level2_id=1123&source=0&data_title=Serverless%20Framework&step=1)** 方式进行提交，注意您的项目需要包含以下内容：
 
 | 参数                  |说明|  
 | ----------------------- |----------| 
