--- a/product/监控与管理/云监控/使用指南/获取监控视图/获取监控图表及报表.md
+++ b/product/监控与管理/云监控/使用指南/获取监控视图/获取监控图表及报表.md
@@ -84,9 +84,9 @@ Dashboard 的具体使用方式可参考：[配置 Dashboard](https://cloud.tenc
 ### 从 Dashboard 导出
 
 1. 登录 [云监控控制台](https://console.cloud.tencent.com/monitor/dashboard)。
-2. 在左侧导航栏中，单击**Dashboard**。
+2. 在左侧导航栏中，单击 **Dashboard**。
 2. [配置 Dashboard](https://cloud.tencent.com/document/product/248/46747)。
-3. 在 Dashboard 页面，找到您想导出数据的监控项，在其上方单击**`...`**，如下图所示。
+3. 在 Dashboard 页面，找到您想导出数据的监控项，在其上方单击 `...`，如下图所示。
 ![](https://main.qcloudimg.com/raw/ec36119bf5a912f4a0629a59e795efb8.png)
 4. 单击**导出数据**，导出对应的实例监控详情列表。
 
