--- a/product/计算与网络/容器服务/最佳实践/监控/使用云原生监控指标进行弹性伸缩.md
+++ b/product/计算与网络/容器服务/最佳实践/监控/使用云原生监控指标进行弹性伸缩.md
@@ -2,7 +2,7 @@
 
 容器服务 TKE 基于 [Custom Metrics API](https://github.com/kubernetes/community/blob/master/contributors/design-proposals/instrumentation/custom-metrics-api.md) 支持许多用于弹性伸缩的指标，涵盖 CPU、内存、硬盘、网络、GPU 相关指标和绝大多数 HPA 弹性伸缩场景，详细列表请参见 [自动伸缩指标说明](https://cloud.tencent.com/document/product/457/38929)。
 
-若用户需要针对自定义的监控指标或更低采样频率的监控数据来实现自动扩缩容，可以将云原生监控采集的指标数据用于弹性伸缩，云原生监控服务是腾讯云提供的适配容器场景的 Prometheus 监控服务，支持默认采集 K8s 相关指标、用户自定义的监控指标，指标默认采集频率为15s。
+若用户需要针对自定义的监控指标或更低采样频率的监控数据来实现自动扩缩容，可以将云原生监控采集的指标数据用于弹性伸缩，云原生监控服务是腾讯云提供的适配容器场景的 Prometheus 监控服务，支持默认采集 K8S 相关指标、用户自定义的监控指标，指标默认采集频率为15s。
 
 下文介绍如何将云原生监控采集的指标用于弹性伸缩。
 
