--- a/product/监控与管理/云监控/最佳实践/使用标签自动监控云资源.md
+++ b/product/监控与管理/云监控/最佳实践/使用标签自动监控云资源.md
@@ -53,7 +53,7 @@
 1. 单击**新建图表**，配置内容如下说明：
    - **图表名**：在**图表配置**中的**基础信息**中填写**图表名**。
    - **监控类型**：本例选择**云产品监控**。
-   - **指标**：选择云产品类型和需要监控的指标。本文选择**云服务器-基础监控**，监控指标以**CPU 利用率**为例。
+   - **指标**：选择云产品类型和需要监控的指标。本文选择**云服务器-基础监控**，监控指标以 **CPU 利用率**为例。
    - **筛选**：对监控数据源进行筛选。本文选择筛选类型为**标签**，并根据各图表绑定不同的标签键和标签值。
 ![](https://main.qcloudimg.com/raw/a36adda30507a8f66a5777546e159307.png)
 2. 新图表成功创建后，此时需要将新建图表拖拽到所属图表组，并拉升到需要的大小。
@@ -62,5 +62,5 @@
 
 ### 步骤5：开启 TOPN 功能
 
-在图表分析时，您可以单击图表中**<img src="https://main.qcloudimg.com/raw/bc2e0e986ee5ad450e8a090582ca0697.png" width="2.4%">**，一键开启 TOPN 各图表的功能。调整排序规则、展示数量。方便您大批量查看机器高低负载。如下图仅展示帝企鹅业务—后端的 TOP2 实例：
+在图表分析时，您可以单击图表中<img src="https://main.qcloudimg.com/raw/bc2e0e986ee5ad450e8a090582ca0697.png" width="2.4%">，一键开启 TOPN 各图表的功能。调整排序规则、展示数量。方便您大批量查看机器高低负载。如下图仅展示帝企鹅业务—后端的 TOP2 实例：
 ![](https://main.qcloudimg.com/raw/73839d8c4749cf9c6f5f85ecb8d9bec7.png)
