--- a/product/大数据与AI/弹性MapReduce/操作指南/管理集群/用户管理.md
+++ b/product/大数据与AI/弹性MapReduce/操作指南/管理集群/用户管理.md
@@ -1,8 +1,8 @@
 ## 功能介绍
-该功能可以帮助您管理 EMR 集群中的用户，本文将为您介绍用户管理的相关操作。
+该功能可以帮助您管理 EMR 集群中的用户，快速进行集群用户的增加、编辑、删除操作，本文将为您介绍用户管理的相关操作。
 >!
 - 目前仅 EMR-V2.6.0 和 EMR-V3.2.1 版本支持用户管理功能。
-- 需要手动触发 ranger-ugsync-site.xml 的配置下发，用户同步才能生效。
+- 需要手动触发 ranger-ugsync-site.xml 的配置下发，并重启 RangerUsersync 服务，用户同步才能生效。
 - 删除用户、重置密码可能导致正在运行的任务失败。
 
 ## 操作步骤
